--- a/AppResOutput/abccare_appendix/current/rslt_male_cat12_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat12_sd.tex
@@ -4,17 +4,17 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{High-Density Lipoprotein Chol. (mg/dL)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{2.884}} & \mc{1}{c}{\scriptsize{6.643}} & \mc{1}{c}{\scriptsize{10.514}} & \mc{1}{c}{\scriptsize{8.119}} & \mc{1}{c}{\scriptsize{-3.497}} & \mc{1}{c}{\scriptsize{0.802}} &  & \mc{1}{c}{\scriptsize{6.803}} \\  
+    \mc{1}{l}{\scriptsize{High-Density Lipoprotein Chol. (mg/dL)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{7.753}} & \mc{1}{c}{\scriptsize{4.402}} & \mc{1}{c}{\scriptsize{-0.267}} & \mc{1}{c}{\scriptsize{-6.882}} & \mc{1}{c}{\scriptsize{-3.497}} & \mc{1}{c}{\scriptsize{9.015}} & \mc{1}{c}{\scriptsize{5.863}} & \mc{1}{c}{\scriptsize{6.803}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.565)}} & \mc{1}{c}{\scriptsize{(0.182)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.289)}} & \mc{1}{c}{\scriptsize{(0.630)}} &  & \mc{1}{c}{\scriptsize{(0.105)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.058)}}} & \mc{1}{c}{\scriptsize{(0.366)}} & \mc{1}{c}{\scriptsize{(0.987)}} & \mc{1}{c}{\scriptsize{(0.232)}} & \mc{1}{c}{\scriptsize{(0.289)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.105)}} \\  
 
-    \mc{1}{l}{\scriptsize{Dyslipidemia}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.051}} & \mc{1}{c}{\scriptsize{0.023}} & \mc{1}{c}{\scriptsize{-0.080}} & \mc{1}{c}{\scriptsize{-0.088}} & \mc{1}{c}{\scriptsize{0.198}} & \mc{1}{c}{\scriptsize{0.087}} & \mc{1}{c}{\scriptsize{0.078}} & \mc{1}{c}{\scriptsize{-0.150}} \\  
+    \mc{1}{l}{\scriptsize{Dyslipidemia}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.094}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{0.200}} & \mc{1}{c}{\scriptsize{0.282}} & \mc{1}{c}{\scriptsize{0.198}} & \mc{1}{c}{\scriptsize{-0.108}} & \mc{1}{c}{\scriptsize{-0.063}} & \mc{1}{c}{\scriptsize{-0.150}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.565)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.262)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.245)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.987)}} & \mc{1}{c}{\scriptsize{(0.232)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{(0.238)}} & \mc{1}{c}{\scriptsize{(0.505)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
 
-    \mc{1}{l}{\scriptsize{Cholesterol Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.034}} & \mc{1}{c}{\scriptsize{0.120}} & \mc{1}{c}{\scriptsize{0.568}} & \mc{1}{c}{\scriptsize{0.309}} & \mc{1}{c}{\scriptsize{-0.421}} & \mc{1}{c}{\scriptsize{-0.111}} & \mc{1}{c}{\scriptsize{0.030}} & \mc{1}{c}{\scriptsize{0.478}} \\  
+    \mc{1}{l}{\scriptsize{Cholesterol Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.477}} & \mc{1}{c}{\scriptsize{0.235}} & \mc{1}{c}{\scriptsize{-0.344}} & \mc{1}{c}{\scriptsize{-0.805}} & \mc{1}{c}{\scriptsize{-0.421}} & \mc{1}{c}{\scriptsize{0.552}} & \mc{1}{c}{\scriptsize{0.311}} & \mc{1}{c}{\scriptsize{0.478}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.565)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.630)}} & \mc{1}{c}{\scriptsize{(0.837)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.987)}} & \mc{1}{c}{\scriptsize{(0.960)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{(0.505)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
 
   \bottomrule
   \end{tabular}
