--- a/AppResOutput/abccare_appendix/current/rslt_female_cat14.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat14.tex
@@ -4,33 +4,33 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Measured BMI}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.999}} & \mc{1}{c}{\scriptsize{2.781}} & \mc{1}{c}{\scriptsize{-0.202}} & \mc{1}{c}{\scriptsize{2.524}} & \mc{1}{c}{\scriptsize{1.978}} & \mc{1}{c}{\scriptsize{1.072}} & \mc{1}{c}{\scriptsize{2.924}} & \mc{1}{c}{\scriptsize{4.711}} \\  
+    \mc{1}{l}{\scriptsize{Measured BMI}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{3.545}} & \mc{1}{c}{\scriptsize{6.421}} & \mc{1}{c}{\scriptsize{1.937}} & \mc{1}{c}{\scriptsize{2.932}} & \mc{1}{c}{\scriptsize{1.978}} & \mc{1}{c}{\scriptsize{3.983}} & \mc{1}{c}{\scriptsize{7.424}} & \mc{1}{c}{\scriptsize{4.711}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.302)}} & \mc{1}{c}{\scriptsize{\textbf{(0.086)}}} & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(0.222)}} & \mc{1}{c}{\scriptsize{(0.288)}} & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.288)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{0.061}} & \mc{1}{c}{\scriptsize{-0.256}} & \mc{1}{c}{\scriptsize{-0.084}} & \mc{1}{c}{\scriptsize{-0.199}} & \mc{1}{c}{\scriptsize{-0.013}} & \mc{1}{c}{\scriptsize{0.102}} & \mc{1}{c}{\scriptsize{0.109}} \\  
+    \mc{1}{l}{\scriptsize{Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.011}} & \mc{1}{c}{\scriptsize{0.143}} & \mc{1}{c}{\scriptsize{-0.261}} &  & \mc{1}{c}{\scriptsize{-0.199}} & \mc{1}{c}{\scriptsize{0.057}} & \mc{1}{c}{\scriptsize{0.209}} & \mc{1}{c}{\scriptsize{0.109}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.315)}} & \mc{1}{c}{\scriptsize{\textbf{(0.030)}}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.211)}} & \mc{1}{c}{\scriptsize{(0.217)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.470)}} & \mc{1}{c}{\scriptsize{(0.140)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} &  & \mc{1}{c}{\scriptsize{\textbf{(0.030)}}} & \mc{1}{c}{\scriptsize{(0.331)}} & \mc{1}{c}{\scriptsize{(0.107)}} & \mc{1}{c}{\scriptsize{(0.217)}} \\  
 
-    \mc{1}{l}{\scriptsize{Severe Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.126}} & \mc{1}{c}{\scriptsize{-0.045}} & \mc{1}{c}{\scriptsize{-0.093}} & \mc{1}{c}{\scriptsize{0.013}} & \mc{1}{c}{\scriptsize{0.020}} & \mc{1}{c}{\scriptsize{-0.147}} & \mc{1}{c}{\scriptsize{-0.065}} & \mc{1}{c}{\scriptsize{-0.040}} \\  
+    \mc{1}{l}{\scriptsize{Severe Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.045}} & \mc{1}{c}{\scriptsize{0.087}} & \mc{1}{c}{\scriptsize{0.014}} & \mc{1}{c}{\scriptsize{0.134}} & \mc{1}{c}{\scriptsize{0.020}} & \mc{1}{c}{\scriptsize{-0.061}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{-0.040}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.322)}} & \mc{1}{c}{\scriptsize{(0.287)}} & \mc{1}{c}{\scriptsize{(0.489)}} & \mc{1}{c}{\scriptsize{(0.473)}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} & \mc{1}{c}{\scriptsize{(0.299)}} & \mc{1}{c}{\scriptsize{(0.394)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.365)}} & \mc{1}{c}{\scriptsize{(0.292)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.302)}} & \mc{1}{c}{\scriptsize{(0.473)}} & \mc{1}{c}{\scriptsize{(0.338)}} & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.394)}} \\  
 
-    \mc{1}{l}{\scriptsize{Waist-hip Ratio}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.006}} & \mc{1}{c}{\scriptsize{0.000}} & \mc{1}{c}{\scriptsize{-0.037}} & \mc{1}{c}{\scriptsize{-0.035}} & \mc{1}{c}{\scriptsize{-0.072}} & \mc{1}{c}{\scriptsize{0.003}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{0.014}} \\  
+    \mc{1}{l}{\scriptsize{Waist-hip Ratio}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.022}} &  & \mc{1}{c}{\scriptsize{-0.076}} & \mc{1}{c}{\scriptsize{-0.052}} & \mc{1}{c}{\scriptsize{-0.072}} & \mc{1}{c}{\scriptsize{-0.007}} & \mc{1}{c}{\scriptsize{0.042}} & \mc{1}{c}{\scriptsize{0.014}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.403)}} & \mc{1}{c}{\scriptsize{(0.464)}} & \mc{1}{c}{\scriptsize{(0.161)}} & \mc{1}{c}{\scriptsize{(0.292)}} & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.443)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.328)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.225)}} &  & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.416)}} & \mc{1}{c}{\scriptsize{(0.143)}} & \mc{1}{c}{\scriptsize{(0.328)}} \\  
 
-    \mc{1}{l}{\scriptsize{Abdominal Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{-0.230}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.284}} & \mc{1}{c}{\scriptsize{-0.041}} & \mc{1}{c}{\scriptsize{0.016}} & \mc{1}{c}{\scriptsize{0.022}} \\  
+    \mc{1}{l}{\scriptsize{Abdominal Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.159}} & \mc{1}{c}{\scriptsize{0.030}} & \mc{1}{c}{\scriptsize{-0.381}} & \mc{1}{c}{\scriptsize{-0.101}} & \mc{1}{c}{\scriptsize{-0.284}} & \mc{1}{c}{\scriptsize{-0.095}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{0.022}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.398)}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{(0.292)}} & \mc{1}{c}{\scriptsize{\textbf{(0.008)}}} & \mc{1}{c}{\scriptsize{(0.375)}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{(0.463)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.120)}} & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.222)}} & \mc{1}{c}{\scriptsize{\textbf{(0.008)}}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.330)}} & \mc{1}{c}{\scriptsize{(0.463)}} \\  
 
-    \mc{1}{l}{\scriptsize{Framingham Risk Score}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.348}} & \mc{1}{c}{\scriptsize{-0.403}} & \mc{1}{c}{\scriptsize{0.948}} & \mc{1}{c}{\scriptsize{0.181}} & \mc{1}{c}{\scriptsize{-0.526}} & \mc{1}{c}{\scriptsize{0.351}} & \mc{1}{c}{\scriptsize{-0.481}} & \mc{1}{c}{\scriptsize{-0.221}} \\  
+    \mc{1}{l}{\scriptsize{Framingham Risk Score}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.259}} & \mc{1}{c}{\scriptsize{-0.260}} & \mc{1}{c}{\scriptsize{-0.488}} & \mc{1}{c}{\scriptsize{-0.545}} & \mc{1}{c}{\scriptsize{-0.526}} & \mc{1}{c}{\scriptsize{-0.197}} & \mc{1}{c}{\scriptsize{-0.105}} & \mc{1}{c}{\scriptsize{-0.221}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.277)}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{(0.396)}} & \mc{1}{c}{\scriptsize{(0.103)}} & \mc{1}{c}{\scriptsize{(0.314)}} & \mc{1}{c}{\scriptsize{(0.288)}} & \mc{1}{c}{\scriptsize{(0.193)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.120)}} & \mc{1}{c}{\scriptsize{(0.103)}} & \mc{1}{c}{\scriptsize{(0.198)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.193)}} \\  
 
-    \mc{1}{l}{\scriptsize{Obesity Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.068}} & \mc{1}{c}{\scriptsize{-0.114}} & \mc{1}{c}{\scriptsize{0.360}} & \mc{1}{c}{\scriptsize{0.088}} & \mc{1}{c}{\scriptsize{0.364}} & \mc{1}{c}{\scriptsize{0.002}} & \mc{1}{c}{\scriptsize{-0.223}} & \mc{1}{c}{\scriptsize{-0.256}} \\  
+    \mc{1}{l}{\scriptsize{Obesity Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.006}} & \mc{1}{c}{\scriptsize{-0.411}} & \mc{1}{c}{\scriptsize{0.433}} & \mc{1}{c}{\scriptsize{0.132}} & \mc{1}{c}{\scriptsize{0.364}} & \mc{1}{c}{\scriptsize{-0.132}} & \mc{1}{c}{\scriptsize{-0.611}} & \mc{1}{c}{\scriptsize{-0.256}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.393)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.414)}} & \mc{1}{c}{\scriptsize{(0.231)}} & \mc{1}{c}{\scriptsize{(0.503)}} & \mc{1}{c}{\scriptsize{(0.261)}} & \mc{1}{c}{\scriptsize{(0.251)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.492)}} & \mc{1}{c}{\scriptsize{(0.221)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.231)}} & \mc{1}{c}{\scriptsize{(0.348)}} & \mc{1}{c}{\scriptsize{(0.214)}} & \mc{1}{c}{\scriptsize{(0.251)}} \\  
 
   \bottomrule
   \end{tabular}
