--- a/AppResOutput/abccare_appendix/current/rslt_female_cat15_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat15_sd.tex
@@ -4,49 +4,49 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.709}} & \mc{1}{c}{\scriptsize{-3.314}} & \mc{1}{c}{\scriptsize{-4.304}} & \mc{1}{c}{\scriptsize{-5.923}} & \mc{1}{c}{\scriptsize{-4.852}} & \mc{1}{c}{\scriptsize{-2.258}} & \mc{1}{c}{\scriptsize{-2.669}} & \mc{1}{c}{\scriptsize{-2.170}} \\  
+    \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.671}} & \mc{1}{c}{\scriptsize{-2.668}} & \mc{1}{c}{\scriptsize{-4.893}} & \mc{1}{c}{\scriptsize{-4.641}} & \mc{1}{c}{\scriptsize{-4.852}} & \mc{1}{c}{\scriptsize{-2.258}} & \mc{1}{c}{\scriptsize{-2.403}} & \mc{1}{c}{\scriptsize{-2.170}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.187)}} & \mc{1}{c}{\scriptsize{(0.187)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.356)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.394)}} & \mc{1}{c}{\scriptsize{(0.365)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.057}} & \mc{1}{c}{\scriptsize{-0.609}} & \mc{1}{c}{\scriptsize{-2.144}} & \mc{1}{c}{\scriptsize{-3.744}} & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{-0.950}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{1.724}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.724}} & \mc{1}{c}{\scriptsize{2.202}} & \mc{1}{c}{\scriptsize{-0.014}} &  & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{0.925}} & \mc{1}{c}{\scriptsize{3.638}} & \mc{1}{c}{\scriptsize{1.724}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.455)}} & \mc{1}{c}{\scriptsize{(0.530)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.523)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
-    \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-3.329}} & \mc{1}{c}{\scriptsize{-4.297}} & \mc{1}{c}{\scriptsize{-4.299}} & \mc{1}{c}{\scriptsize{-9.416}} & \mc{1}{c}{\scriptsize{-4.058}} & \mc{1}{c}{\scriptsize{-3.216}} & \mc{1}{c}{\scriptsize{-4.096}} \\  
+    \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-5.649}} & \mc{1}{c}{\scriptsize{-6.052}} & \mc{1}{c}{\scriptsize{-9.358}} & \mc{1}{c}{\scriptsize{-11.051}} & \mc{1}{c}{\scriptsize{-9.416}} & \mc{1}{c}{\scriptsize{-4.406}} & \mc{1}{c}{\scriptsize{-4.460}} & \mc{1}{c}{\scriptsize{-4.096}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.037)}}} & \mc{1}{c}{\scriptsize{(0.199)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.122)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.904}} & \mc{1}{c}{\scriptsize{-2.256}} & \mc{1}{c}{\scriptsize{1.064}} & \mc{1}{c}{\scriptsize{-0.701}} & \mc{1}{c}{\scriptsize{-0.058}} & \mc{1}{c}{\scriptsize{-2.974}} & \mc{1}{c}{\scriptsize{-3.181}} & \mc{1}{c}{\scriptsize{-3.034}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.466}} & \mc{1}{c}{\scriptsize{-2.366}} & \mc{1}{c}{\scriptsize{-0.109}} &  & \mc{1}{c}{\scriptsize{-0.058}} & \mc{1}{c}{\scriptsize{-3.109}} & \mc{1}{c}{\scriptsize{-3.364}} & \mc{1}{c}{\scriptsize{-3.034}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.375)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.364)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.394)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.375)}} \\  
 
-    \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.749}} & \mc{1}{c}{\scriptsize{-2.745}} & \mc{1}{c}{\scriptsize{-2.996}} & \mc{1}{c}{\scriptsize{-4.679}} & \mc{1}{c}{\scriptsize{-8.949}} & \mc{1}{c}{\scriptsize{-2.638}} & \mc{1}{c}{\scriptsize{-2.485}} & \mc{1}{c}{\scriptsize{-4.376}} \\  
+    \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-6.163}} & \mc{1}{c}{\scriptsize{-5.939}} & \mc{1}{c}{\scriptsize{-9.552}} & \mc{1}{c}{\scriptsize{-9.018}} & \mc{1}{c}{\scriptsize{-8.949}} & \mc{1}{c}{\scriptsize{-5.244}} & \mc{1}{c}{\scriptsize{-4.560}} & \mc{1}{c}{\scriptsize{-4.376}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.303)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.378)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.148)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-3.399}} & \mc{1}{c}{\scriptsize{-4.109}} & \mc{1}{c}{\scriptsize{-1.502}} & \mc{1}{c}{\scriptsize{-4.550}} & \mc{1}{c}{\scriptsize{-3.765}} & \mc{1}{c}{\scriptsize{-4.155}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-5.625}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-4.564}} & \mc{1}{c}{\scriptsize{-4.137}} & \mc{1}{c}{\scriptsize{-3.457}} & \mc{1}{c}{\scriptsize{-7.905}} & \mc{1}{c}{\scriptsize{-3.765}} & \mc{1}{c}{\scriptsize{-4.866}} & \mc{1}{c}{\scriptsize{-3.416}} & \mc{1}{c}{\scriptsize{-5.625}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(0.151)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.401)}} & \mc{1}{c}{\scriptsize{(0.234)}} & \mc{1}{c}{\scriptsize{(0.192)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.195)}} & \mc{1}{c}{\scriptsize{(0.401)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
 
-    \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.256}} & \mc{1}{c}{\scriptsize{-2.213}} & \mc{1}{c}{\scriptsize{-4.552}} & \mc{1}{c}{\scriptsize{-4.455}} & \mc{1}{c}{\scriptsize{-10.540}} & \mc{1}{c}{\scriptsize{-2.894}} & \mc{1}{c}{\scriptsize{-1.905}} & \mc{1}{c}{\scriptsize{-2.927}} \\  
+    \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-4.721}} & \mc{1}{c}{\scriptsize{-5.735}} & \mc{1}{c}{\scriptsize{-10.732}} & \mc{1}{c}{\scriptsize{-10.913}} & \mc{1}{c}{\scriptsize{-10.540}} & \mc{1}{c}{\scriptsize{-3.299}} & \mc{1}{c}{\scriptsize{-4.233}} & \mc{1}{c}{\scriptsize{-2.927}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.378)}} & \mc{1}{c}{\scriptsize{(0.298)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.244)}} & \mc{1}{c}{\scriptsize{(0.298)}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.091}} & \mc{1}{c}{\scriptsize{-0.694}} & \mc{1}{c}{\scriptsize{-2.076}} & \mc{1}{c}{\scriptsize{-1.664}} & \mc{1}{c}{\scriptsize{-0.702}} & \mc{1}{c}{\scriptsize{-1.082}} &  & \mc{1}{c}{\scriptsize{1.563}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{-0.797}} & \mc{1}{c}{\scriptsize{-4.159}} & \mc{1}{c}{\scriptsize{-0.702}} & \mc{1}{c}{\scriptsize{0.870}} & \mc{1}{c}{\scriptsize{0.701}} & \mc{1}{c}{\scriptsize{1.563}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.455)}} &  & \mc{1}{c}{\scriptsize{(0.430)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.418)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.523)}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
-    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.146}} & \mc{1}{c}{\scriptsize{-2.581}} & \mc{1}{c}{\scriptsize{-4.917}} & \mc{1}{c}{\scriptsize{-4.896}} & \mc{1}{c}{\scriptsize{-10.996}} & \mc{1}{c}{\scriptsize{-2.564}} & \mc{1}{c}{\scriptsize{-1.827}} & \mc{1}{c}{\scriptsize{-4.987}} \\  
+    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-6.436}} & \mc{1}{c}{\scriptsize{-6.271}} & \mc{1}{c}{\scriptsize{-11.241}} & \mc{1}{c}{\scriptsize{-9.194}} & \mc{1}{c}{\scriptsize{-10.996}} & \mc{1}{c}{\scriptsize{-5.472}} & \mc{1}{c}{\scriptsize{-4.928}} & \mc{1}{c}{\scriptsize{-4.987}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.155)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(0.157)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.286)}} & \mc{1}{c}{\scriptsize{(0.387)}} & \mc{1}{c}{\scriptsize{(0.169)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.086)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.273)}} & \mc{1}{c}{\scriptsize{(0.169)}} \\  
 
-    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.516}} & \mc{1}{c}{\scriptsize{-2.306}} & \mc{1}{c}{\scriptsize{-0.151}} & \mc{1}{c}{\scriptsize{-2.444}} & \mc{1}{c}{\scriptsize{0.330}} & \mc{1}{c}{\scriptsize{-3.477}} & \mc{1}{c}{\scriptsize{-2.589}} & \mc{1}{c}{\scriptsize{-3.108}} \\  
+    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.365}} & \mc{1}{c}{\scriptsize{-1.290}} & \mc{1}{c}{\scriptsize{0.290}} & \mc{1}{c}{\scriptsize{-4.084}} & \mc{1}{c}{\scriptsize{0.330}} & \mc{1}{c}{\scriptsize{-3.089}} & \mc{1}{c}{\scriptsize{-1.441}} & \mc{1}{c}{\scriptsize{-3.108}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.179)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.121)}} & \mc{1}{c}{\scriptsize{(0.169)}} & \mc{1}{c}{\scriptsize{(0.192)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.272)}} & \mc{1}{c}{\scriptsize{(0.334)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.192)}} \\  
 
-    \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.507}} & \mc{1}{c}{\scriptsize{-0.390}} & \mc{1}{c}{\scriptsize{-0.527}} & \mc{1}{c}{\scriptsize{-0.615}} & \mc{1}{c}{\scriptsize{-0.678}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.355}} & \mc{1}{c}{\scriptsize{-0.552}} \\  
+    \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.624}} & \mc{1}{c}{\scriptsize{-0.429}} & \mc{1}{c}{\scriptsize{-0.747}} & \mc{1}{c}{\scriptsize{-0.923}} & \mc{1}{c}{\scriptsize{-0.678}} & \mc{1}{c}{\scriptsize{-0.589}} & \mc{1}{c}{\scriptsize{-0.302}} & \mc{1}{c}{\scriptsize{-0.552}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.088)}}} & \mc{1}{c}{\scriptsize{(0.146)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.199)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} \\  
 
   \bottomrule
   \end{tabular}
