--- a/AppResOutput/abccare_appendix/current/rslt_female_cat2_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat2_sd.tex
@@ -4,33 +4,33 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{1.005}} & \mc{1}{c}{\scriptsize{0.192}} & \mc{1}{c}{\scriptsize{1.332}} & \mc{1}{c}{\scriptsize{0.759}} & \mc{1}{c}{\scriptsize{1.279}} & \mc{1}{c}{\scriptsize{0.566}} & \mc{1}{c}{\scriptsize{0.028}} & \mc{1}{c}{\scriptsize{0.441}} \\  
+    \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{1.581}} & \mc{1}{c}{\scriptsize{0.746}} & \mc{1}{c}{\scriptsize{1.684}} & \mc{1}{c}{\scriptsize{2.248}} & \mc{1}{c}{\scriptsize{1.279}} & \mc{1}{c}{\scriptsize{0.980}} & \mc{1}{c}{\scriptsize{0.570}} & \mc{1}{c}{\scriptsize{0.441}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.354)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{(0.271)}} & \mc{1}{c}{\scriptsize{(0.322)}} & \mc{1}{c}{\scriptsize{(0.240)}} & \mc{1}{c}{\scriptsize{(0.677)}} & \mc{1}{c}{\scriptsize{(0.782)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{(0.240)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
 
-     & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{1.126}} & \mc{1}{c}{\scriptsize{0.375}} & \mc{1}{c}{\scriptsize{2.706}} & \mc{1}{c}{\scriptsize{1.931}} & \mc{1}{c}{\scriptsize{5.481}} & \mc{1}{c}{\scriptsize{0.368}} & \mc{1}{c}{\scriptsize{0.087}} & \mc{1}{c}{\scriptsize{1.753}} \\  
+     & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{2.668}} & \mc{1}{c}{\scriptsize{1.582}} & \mc{1}{c}{\scriptsize{4.729}} & \mc{1}{c}{\scriptsize{3.111}} & \mc{1}{c}{\scriptsize{5.481}} & \mc{1}{c}{\scriptsize{1.544}} & \mc{1}{c}{\scriptsize{1.215}} & \mc{1}{c}{\scriptsize{1.753}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.354)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{(0.161)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} & \mc{1}{c}{\scriptsize{(0.692)}} & \mc{1}{c}{\scriptsize{(0.782)}} & \mc{1}{c}{\scriptsize{(0.424)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(0.477)}} & \mc{1}{c}{\scriptsize{\textbf{(0.042)}}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} & \mc{1}{c}{\scriptsize{(0.466)}} & \mc{1}{c}{\scriptsize{(0.618)}} & \mc{1}{c}{\scriptsize{(0.424)}} \\  
 
-     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.441}} & \mc{1}{c}{\scriptsize{0.312}} & \mc{1}{c}{\scriptsize{3.089}} & \mc{1}{c}{\scriptsize{3.791}} & \mc{1}{c}{\scriptsize{5.180}} & \mc{1}{c}{\scriptsize{-0.588}} & \mc{1}{c}{\scriptsize{-0.482}} & \mc{1}{c}{\scriptsize{-0.251}} \\  
+     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.762}} & \mc{1}{c}{\scriptsize{0.747}} & \mc{1}{c}{\scriptsize{4.434}} & \mc{1}{c}{\scriptsize{6.109}} & \mc{1}{c}{\scriptsize{5.180}} & \mc{1}{c}{\scriptsize{-0.899}} & \mc{1}{c}{\scriptsize{-0.872}} & \mc{1}{c}{\scriptsize{-0.251}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.042)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{(0.677)}} & \mc{1}{c}{\scriptsize{(0.745)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.631)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
 
-     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2.112}} & \mc{1}{c}{\scriptsize{1.287}} & \mc{1}{c}{\scriptsize{8.288}} & \mc{1}{c}{\scriptsize{8.502}} & \mc{1}{c}{\scriptsize{14.933}} & \mc{1}{c}{\scriptsize{0.306}} & \mc{1}{c}{\scriptsize{-0.342}} & \mc{1}{c}{\scriptsize{-0.047}} \\  
+     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2.858}} & \mc{1}{c}{\scriptsize{1.686}} & \mc{1}{c}{\scriptsize{13.719}} & \mc{1}{c}{\scriptsize{16.856}} & \mc{1}{c}{\scriptsize{14.933}} & \mc{1}{c}{\scriptsize{-0.309}} & \mc{1}{c}{\scriptsize{-1.673}} & \mc{1}{c}{\scriptsize{-0.047}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.354)}} & \mc{1}{c}{\scriptsize{(0.609)}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.692)}} & \mc{1}{c}{\scriptsize{(0.782)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.028)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.631)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
 
-     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{1.927}} & \mc{1}{c}{\scriptsize{0.657}} & \mc{1}{c}{\scriptsize{8.156}} & \mc{1}{c}{\scriptsize{6.745}} & \mc{1}{c}{\scriptsize{13.978}} & \mc{1}{c}{\scriptsize{0.146}} & \mc{1}{c}{\scriptsize{-0.413}} & \mc{1}{c}{\scriptsize{0.479}} \\  
+     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{2.736}} & \mc{1}{c}{\scriptsize{1.425}} & \mc{1}{c}{\scriptsize{12.957}} & \mc{1}{c}{\scriptsize{15.238}} & \mc{1}{c}{\scriptsize{13.978}} & \mc{1}{c}{\scriptsize{-0.273}} & \mc{1}{c}{\scriptsize{-0.335}} & \mc{1}{c}{\scriptsize{0.479}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.354)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.692)}} & \mc{1}{c}{\scriptsize{(0.782)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.056)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{1.004}} & \mc{1}{c}{\scriptsize{0.198}} & \mc{1}{c}{\scriptsize{3.102}} & \mc{1}{c}{\scriptsize{2.169}} & \mc{1}{c}{\scriptsize{7.086}} & \mc{1}{c}{\scriptsize{0.492}} & \mc{1}{c}{\scriptsize{-0.414}} & \mc{1}{c}{\scriptsize{0.455}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{0.659}} & \mc{1}{c}{\scriptsize{0.572}} & \mc{1}{c}{\scriptsize{5.909}} & \mc{1}{c}{\scriptsize{7.605}} & \mc{1}{c}{\scriptsize{7.086}} & \mc{1}{c}{\scriptsize{-0.773}} & \mc{1}{c}{\scriptsize{-1.183}} & \mc{1}{c}{\scriptsize{0.455}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{(0.271)}} & \mc{1}{c}{\scriptsize{(0.322)}} & \mc{1}{c}{\scriptsize{\textbf{(0.058)}}} & \mc{1}{c}{\scriptsize{(0.692)}} & \mc{1}{c}{\scriptsize{(0.782)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.090)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.058)}}} & \mc{1}{c}{\scriptsize{(0.628)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
 
-    \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.276}} & \mc{1}{c}{\scriptsize{0.050}} & \mc{1}{c}{\scriptsize{0.751}} & \mc{1}{c}{\scriptsize{0.477}} & \mc{1}{c}{\scriptsize{1.219}} & \mc{1}{c}{\scriptsize{0.158}} & \mc{1}{c}{\scriptsize{-0.069}} & \mc{1}{c}{\scriptsize{0.144}} \\  
+    \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.266}} & \mc{1}{c}{\scriptsize{0.125}} & \mc{1}{c}{\scriptsize{1.162}} & \mc{1}{c}{\scriptsize{1.014}} & \mc{1}{c}{\scriptsize{1.219}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{-0.054}} & \mc{1}{c}{\scriptsize{0.144}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.311)}} & \mc{1}{c}{\scriptsize{(0.738)}} & \mc{1}{c}{\scriptsize{\textbf{(0.071)}}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{(0.612)}} & \mc{1}{c}{\scriptsize{(0.775)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\  
 
   \bottomrule
   \end{tabular}
