--- a/AppResOutput/abccare_appendix/current/rslt_female_cat4_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat4_sd.tex
@@ -4,41 +4,41 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Parental Labor Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{2,248}} & \mc{1}{c}{\scriptsize{2,885}} & \mc{1}{c}{\scriptsize{2,860}} & \mc{1}{c}{\scriptsize{4,969}} & \mc{1}{c}{\scriptsize{9,700}} & \mc{1}{c}{\scriptsize{2,177}} & \mc{1}{c}{\scriptsize{2,354}} & \mc{1}{c}{\scriptsize{7,337}} \\  
+    \mc{1}{l}{\scriptsize{Parental Labor Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{4,516}} & \mc{1}{c}{\scriptsize{7,101}} & \mc{1}{c}{\scriptsize{5,865}} & \mc{1}{c}{\scriptsize{10,219}} & \mc{1}{c}{\scriptsize{9,700}} & \mc{1}{c}{\scriptsize{5,069}} & \mc{1}{c}{\scriptsize{6,485}} & \mc{1}{c}{\scriptsize{7,337}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(0.446)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.137)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.272)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{516}} & \mc{1}{c}{\scriptsize{73.158}} & \mc{1}{c}{\scriptsize{-2,177}} & \mc{1}{c}{\scriptsize{-287}} & \mc{1}{c}{\scriptsize{1,764}} & \mc{1}{c}{\scriptsize{1,266}} & \mc{1}{c}{\scriptsize{36.760}} & \mc{1}{c}{\scriptsize{3,233}} \\  
+     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{222}} & \mc{1}{c}{\scriptsize{584}} & \mc{1}{c}{\scriptsize{-3,056}} & \mc{1}{c}{\scriptsize{1,167}} & \mc{1}{c}{\scriptsize{1,764}} & \mc{1}{c}{\scriptsize{2,254}} & \mc{1}{c}{\scriptsize{982}} & \mc{1}{c}{\scriptsize{3,233}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.484)}} & \mc{1}{c}{\scriptsize{(0.554)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
-     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{1,821}} & \mc{1}{c}{\scriptsize{1,391}} & \mc{1}{c}{\scriptsize{4,270}} & \mc{1}{c}{\scriptsize{5,404}} & \mc{1}{c}{\scriptsize{8,601}} & \mc{1}{c}{\scriptsize{1,247}} & \mc{1}{c}{\scriptsize{215}} & \mc{1}{c}{\scriptsize{3,762}} \\  
+     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2,756}} & \mc{1}{c}{\scriptsize{3,277}} & \mc{1}{c}{\scriptsize{5,146}} & \mc{1}{c}{\scriptsize{10,509}} & \mc{1}{c}{\scriptsize{8,601}} & \mc{1}{c}{\scriptsize{2,802}} &  & \mc{1}{c}{\scriptsize{3,762}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.357)}} & \mc{1}{c}{\scriptsize{(0.455)}} & \mc{1}{c}{\scriptsize{(0.242)}} & \mc{1}{c}{\scriptsize{(0.369)}} & \mc{1}{c}{\scriptsize{(0.141)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.487)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.141)}} & \mc{1}{c}{\scriptsize{(0.551)}} &  & \mc{1}{c}{\scriptsize{(0.487)}} \\  
 
-     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{2,336}} & \mc{1}{c}{\scriptsize{3,423}} & \mc{1}{c}{\scriptsize{4,473}} & \mc{1}{c}{\scriptsize{3,707}} & \mc{1}{c}{\scriptsize{8,946}} & \mc{1}{c}{\scriptsize{1,747}} & \mc{1}{c}{\scriptsize{2,723}} & \mc{1}{c}{\scriptsize{6,036}} \\  
+     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{4,039}} & \mc{1}{c}{\scriptsize{7,569}} & \mc{1}{c}{\scriptsize{7,094}} & \mc{1}{c}{\scriptsize{9,236}} & \mc{1}{c}{\scriptsize{8,946}} & \mc{1}{c}{\scriptsize{3,852}} & \mc{1}{c}{\scriptsize{7,337}} & \mc{1}{c}{\scriptsize{6,036}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.201)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.154)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.154)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{7,044}} & \mc{1}{c}{\scriptsize{8,365}} & \mc{1}{c}{\scriptsize{8,515}} & \mc{1}{c}{\scriptsize{5,050}} & \mc{1}{c}{\scriptsize{13,434}} & \mc{1}{c}{\scriptsize{6,708}} & \mc{1}{c}{\scriptsize{8,620}} & \mc{1}{c}{\scriptsize{2,974}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{2,181}} & \mc{1}{c}{\scriptsize{5,322}} & \mc{1}{c}{\scriptsize{13,195}} & \mc{1}{c}{\scriptsize{13,013}} & \mc{1}{c}{\scriptsize{13,434}} & \mc{1}{c}{\scriptsize{528}} & \mc{1}{c}{\scriptsize{3,941}} & \mc{1}{c}{\scriptsize{2,974}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.115)}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.201)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.484)}} & \mc{1}{c}{\scriptsize{(0.429)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.188)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
-     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{10,100}} & \mc{1}{c}{\scriptsize{14,358}} & \mc{1}{c}{\scriptsize{18,585}} & \mc{1}{c}{\scriptsize{26,430}} & \mc{1}{c}{\scriptsize{26,474}} & \mc{1}{c}{\scriptsize{7,929}} & \mc{1}{c}{\scriptsize{10,810}} & \mc{1}{c}{\scriptsize{18,629}} \\  
+     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{13,633}} & \mc{1}{c}{\scriptsize{19,386}} & \mc{1}{c}{\scriptsize{22,294}} & \mc{1}{c}{\scriptsize{33,624}} & \mc{1}{c}{\scriptsize{26,474}} & \mc{1}{c}{\scriptsize{11,570}} & \mc{1}{c}{\scriptsize{11,176}} & \mc{1}{c}{\scriptsize{18,629}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.111)}} & \mc{1}{c}{\scriptsize{(0.115)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.512)}} & \mc{1}{c}{\scriptsize{(0.115)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{9,596}} & \mc{1}{c}{\scriptsize{7,747}} & \mc{1}{c}{\scriptsize{5,132}} & \mc{1}{c}{\scriptsize{10,827}} & \mc{1}{c}{\scriptsize{8,435}} & \mc{1}{c}{\scriptsize{10,155}} & \mc{1}{c}{\scriptsize{6,456}} & \mc{1}{c}{\scriptsize{10,480}} \\  
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8,565}} & \mc{1}{c}{\scriptsize{9,322}} & \mc{1}{c}{\scriptsize{2,829}} & \mc{1}{c}{\scriptsize{5,533}} & \mc{1}{c}{\scriptsize{8,435}} & \mc{1}{c}{\scriptsize{9,819}} & \mc{1}{c}{\scriptsize{8,817}} & \mc{1}{c}{\scriptsize{10,480}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.492)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{9,008}} & \mc{1}{c}{\scriptsize{8,489}} & \mc{1}{c}{\scriptsize{10,316}} & \mc{1}{c}{\scriptsize{12,798}} & \mc{1}{c}{\scriptsize{25,135}} & \mc{1}{c}{\scriptsize{9,461}} & \mc{1}{c}{\scriptsize{8,813}} & \mc{1}{c}{\scriptsize{3,926}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{5,708}} & \mc{1}{c}{\scriptsize{6,944}} & \mc{1}{c}{\scriptsize{25,270}} & \mc{1}{c}{\scriptsize{41,245}} & \mc{1}{c}{\scriptsize{25,135}} & \mc{1}{c}{\scriptsize{4,446}} & \mc{1}{c}{\scriptsize{4,608}} & \mc{1}{c}{\scriptsize{3,926}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.141)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.507)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
-    \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{0.074}} & \mc{1}{c}{\scriptsize{-0.008}} & \mc{1}{c}{\scriptsize{0.450}} & \mc{1}{c}{\scriptsize{0.663}} & \mc{1}{c}{\scriptsize{0.635}} & \mc{1}{c}{\scriptsize{0.013}} & \mc{1}{c}{\scriptsize{-0.069}} & \mc{1}{c}{\scriptsize{0.297}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.195}} & \mc{1}{c}{\scriptsize{0.554}} & \mc{1}{c}{\scriptsize{0.578}} & \mc{1}{c}{\scriptsize{0.635}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{0.226}} & \mc{1}{c}{\scriptsize{0.297}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.327)}} & \mc{1}{c}{\scriptsize{(0.479)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.554)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(0.327)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
   \bottomrule
   \end{tabular}
