--- a/AppResOutput/abccare_appendix/current/rslt_female_cat5_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat5_sd.tex
@@ -4,29 +4,29 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Mother Works}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{0.114}} & \mc{1}{c}{\scriptsize{0.090}} & \mc{1}{c}{\scriptsize{0.296}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.048}} & \mc{1}{c}{\scriptsize{0.038}} & \mc{1}{c}{\scriptsize{0.096}} \\  
+    \mc{1}{l}{\scriptsize{Mother Works}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{0.168}} & \mc{1}{c}{\scriptsize{0.119}} & \mc{1}{c}{\scriptsize{0.323}} & \mc{1}{c}{\scriptsize{0.348}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.101}} & \mc{1}{c}{\scriptsize{0.078}} & \mc{1}{c}{\scriptsize{0.096}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.101)}} & \mc{1}{c}{\scriptsize{(0.273)}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.444)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{(0.383)}} & \mc{1}{c}{\scriptsize{(0.472)}} & \mc{1}{c}{\scriptsize{(0.444)}} \\  
 
-     & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{0.119}} & \mc{1}{c}{\scriptsize{0.090}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{0.191}} & \mc{1}{c}{\scriptsize{0.179}} & \mc{1}{c}{\scriptsize{0.092}} & \mc{1}{c}{\scriptsize{0.056}} & \mc{1}{c}{\scriptsize{0.057}} \\  
+     & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{0.087}} & \mc{1}{c}{\scriptsize{0.027}} & \mc{1}{c}{\scriptsize{0.177}} & \mc{1}{c}{\scriptsize{0.151}} & \mc{1}{c}{\scriptsize{0.179}} & \mc{1}{c}{\scriptsize{0.066}} & \mc{1}{c}{\scriptsize{0.006}} & \mc{1}{c}{\scriptsize{0.057}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.101)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.320)}} & \mc{1}{c}{\scriptsize{(0.487)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.446)}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.260)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.510)}} & \mc{1}{c}{\scriptsize{(0.491)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
-     & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{0.127}} & \mc{1}{c}{\scriptsize{0.123}} & \mc{1}{c}{\scriptsize{0.306}} & \mc{1}{c}{\scriptsize{0.312}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{0.073}} & \mc{1}{c}{\scriptsize{0.054}} \\  
+     & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{0.118}} & \mc{1}{c}{\scriptsize{0.082}} & \mc{1}{c}{\scriptsize{0.319}} & \mc{1}{c}{\scriptsize{0.337}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.060}} & \mc{1}{c}{\scriptsize{0.049}} & \mc{1}{c}{\scriptsize{0.054}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.075)}}} & \mc{1}{c}{\scriptsize{(0.124)}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{(0.345)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.279)}} & \mc{1}{c}{\scriptsize{(0.537)}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{(0.510)}} & \mc{1}{c}{\scriptsize{(0.479)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
-     & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{0.089}} & \mc{1}{c}{\scriptsize{0.064}} & \mc{1}{c}{\scriptsize{0.342}} & \mc{1}{c}{\scriptsize{0.309}} & \mc{1}{c}{\scriptsize{0.424}} & \mc{1}{c}{\scriptsize{0.005}} & \mc{1}{c}{\scriptsize{-0.017}} & \mc{1}{c}{\scriptsize{-0.024}} \\  
+     & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{0.067}} & \mc{1}{c}{\scriptsize{0.008}} & \mc{1}{c}{\scriptsize{0.367}} & \mc{1}{c}{\scriptsize{0.307}} & \mc{1}{c}{\scriptsize{0.424}} & \mc{1}{c}{\scriptsize{-0.056}} & \mc{1}{c}{\scriptsize{-0.062}} & \mc{1}{c}{\scriptsize{-0.024}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.328)}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.979)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.510)}} & \mc{1}{c}{\scriptsize{(0.472)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.040}} & \mc{1}{c}{\scriptsize{-0.066}} & \mc{1}{c}{\scriptsize{0.180}} & \mc{1}{c}{\scriptsize{0.173}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{-0.075}} & \mc{1}{c}{\scriptsize{-0.092}} & \mc{1}{c}{\scriptsize{-0.089}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.018}} & \mc{1}{c}{\scriptsize{-0.012}} & \mc{1}{c}{\scriptsize{0.510}} & \mc{1}{c}{\scriptsize{0.562}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{-0.097}} & \mc{1}{c}{\scriptsize{-0.144}} & \mc{1}{c}{\scriptsize{-0.089}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.327)}} & \mc{1}{c}{\scriptsize{(0.328)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.487)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.979)}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.510)}} & \mc{1}{c}{\scriptsize{(0.472)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
-    \mc{1}{l}{\scriptsize{Mother Works Factor}} & \mc{1}{c}{\scriptsize{2 to 21}} & \mc{1}{c}{\scriptsize{-0.275}} & \mc{1}{c}{\scriptsize{-0.227}} & \mc{1}{c}{\scriptsize{-0.793}} & \mc{1}{c}{\scriptsize{-0.799}} & \mc{1}{c}{\scriptsize{-0.734}} & \mc{1}{c}{\scriptsize{-0.129}} & \mc{1}{c}{\scriptsize{-0.053}} & \mc{1}{c}{\scriptsize{-0.092}} \\  
+    \mc{1}{l}{\scriptsize{Mother Works Factor}} & \mc{1}{c}{\scriptsize{2 to 21}} & \mc{1}{c}{\scriptsize{-0.207}} & \mc{1}{c}{\scriptsize{0.085}} & \mc{1}{c}{\scriptsize{-0.662}} & \mc{1}{c}{\scriptsize{-0.578}} & \mc{1}{c}{\scriptsize{-0.734}} & \mc{1}{c}{\scriptsize{-0.071}} & \mc{1}{c}{\scriptsize{0.103}} & \mc{1}{c}{\scriptsize{-0.092}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.093)}}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.749)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.979)}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{(0.510)}} & \mc{1}{c}{\scriptsize{(0.491)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
   \bottomrule
   \end{tabular}
