--- a/AppResOutput/abccare_appendix/current/rslt_female_cat7_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat7_sd.tex
@@ -4,29 +4,29 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.125}} & \mc{1}{c}{\scriptsize{0.133}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{0.180}} & \mc{1}{c}{\scriptsize{0.340}} & \mc{1}{c}{\scriptsize{0.111}} & \mc{1}{c}{\scriptsize{0.128}} & \mc{1}{c}{\scriptsize{0.070}} \\  
+    \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.131}} & \mc{1}{c}{\scriptsize{0.079}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.395}} & \mc{1}{c}{\scriptsize{0.340}} & \mc{1}{c}{\scriptsize{0.056}} & \mc{1}{c}{\scriptsize{-0.004}} & \mc{1}{c}{\scriptsize{0.070}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.185)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.312)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.262)}} & \mc{1}{c}{\scriptsize{(0.542)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.264)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.585)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
 
-    \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{167}} & \mc{1}{c}{\scriptsize{-1,227}} & \mc{1}{c}{\scriptsize{1,577}} & \mc{1}{c}{\scriptsize{136}} & \mc{1}{c}{\scriptsize{8,263}} & \mc{1}{c}{\scriptsize{-429}} & \mc{1}{c}{\scriptsize{-1,802}} & \mc{1}{c}{\scriptsize{447}} \\  
+    \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{1,741}} & \mc{1}{c}{\scriptsize{1,138}} & \mc{1}{c}{\scriptsize{6,932}} & \mc{1}{c}{\scriptsize{10,745}} & \mc{1}{c}{\scriptsize{8,263}} & \mc{1}{c}{\scriptsize{496}} & \mc{1}{c}{\scriptsize{-1,134}} & \mc{1}{c}{\scriptsize{447}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.467)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.547)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.393)}} & \mc{1}{c}{\scriptsize{(0.628)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{(0.637)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
 
-     & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{12,377}} & \mc{1}{c}{\scriptsize{9,616}} & \mc{1}{c}{\scriptsize{17,677}} & \mc{1}{c}{\scriptsize{18,497}} & \mc{1}{c}{\scriptsize{14,862}} & \mc{1}{c}{\scriptsize{10,847}} & \mc{1}{c}{\scriptsize{7,159}} & \mc{1}{c}{\scriptsize{-822}} \\  
+     & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{2,548}} & \mc{1}{c}{\scriptsize{2,412}} & \mc{1}{c}{\scriptsize{14,356}} & \mc{1}{c}{\scriptsize{10,256}} & \mc{1}{c}{\scriptsize{14,862}} & \mc{1}{c}{\scriptsize{-425}} & \mc{1}{c}{\scriptsize{-1,078}} & \mc{1}{c}{\scriptsize{-822}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.140)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.393)}} & \mc{1}{c}{\scriptsize{(0.628)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.264)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.637)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
 
-    \mc{1}{l}{\scriptsize{Public-Transfer Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-728}} & \mc{1}{c}{\scriptsize{-1,124}} & \mc{1}{c}{\scriptsize{-247}} & \mc{1}{c}{\scriptsize{-1,208}} & \mc{1}{c}{\scriptsize{-2,875}} & \mc{1}{c}{\scriptsize{-1,054}} & \mc{1}{c}{\scriptsize{-897}} & \mc{1}{c}{\scriptsize{-1,480}} \\  
+    \mc{1}{l}{\scriptsize{Public-Transfer Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-1,424}} & \mc{1}{c}{\scriptsize{-2,218}} & \mc{1}{c}{\scriptsize{-1,322}} & \mc{1}{c}{\scriptsize{-1,512}} & \mc{1}{c}{\scriptsize{-2,875}} & \mc{1}{c}{\scriptsize{-1,751}} & \mc{1}{c}{\scriptsize{-1,776}} & \mc{1}{c}{\scriptsize{-1,480}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.347)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.547)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.365)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.262)}} & \mc{1}{c}{\scriptsize{(0.211)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.264)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.288)}} & \mc{1}{c}{\scriptsize{(0.391)}} & \mc{1}{c}{\scriptsize{(0.365)}} \\  
 
-     & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-1,832}} & \mc{1}{c}{\scriptsize{-1,117}} & \mc{1}{c}{\scriptsize{-1,613}} & \mc{1}{c}{\scriptsize{-1,542}} & \mc{1}{c}{\scriptsize{-3,221}} & \mc{1}{c}{\scriptsize{-1,483}} & \mc{1}{c}{\scriptsize{-915}} & \mc{1}{c}{\scriptsize{-2,626}} \\  
+     & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-2,672}} & \mc{1}{c}{\scriptsize{-1,300}} & \mc{1}{c}{\scriptsize{-3,053}} & \mc{1}{c}{\scriptsize{-3,333}} & \mc{1}{c}{\scriptsize{-3,221}} & \mc{1}{c}{\scriptsize{-2,269}} & \mc{1}{c}{\scriptsize{-705}} & \mc{1}{c}{\scriptsize{-2,626}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.081)}}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.347)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.381)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.136)}} & \mc{1}{c}{\scriptsize{(0.514)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.148)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.291)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.381)}} \\  
 
-    \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.513}} & \mc{1}{c}{\scriptsize{0.350}} & \mc{1}{c}{\scriptsize{0.568}} & \mc{1}{c}{\scriptsize{0.485}} & \mc{1}{c}{\scriptsize{0.998}} & \mc{1}{c}{\scriptsize{0.464}} & \mc{1}{c}{\scriptsize{0.316}} & \mc{1}{c}{\scriptsize{0.244}} \\  
+    \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.434}} & \mc{1}{c}{\scriptsize{0.064}} & \mc{1}{c}{\scriptsize{0.970}} & \mc{1}{c}{\scriptsize{0.793}} & \mc{1}{c}{\scriptsize{0.998}} & \mc{1}{c}{\scriptsize{0.274}} & \mc{1}{c}{\scriptsize{-0.064}} & \mc{1}{c}{\scriptsize{0.244}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.246)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.538)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.314)}} & \mc{1}{c}{\scriptsize{(0.628)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.264)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.508)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
 
   \bottomrule
   \end{tabular}
