--- a/AppResOutput/abccare_appendix/current/rslt_male_cat0_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat0_sd.tex
@@ -4,69 +4,69 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Std. IQ Test}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{10.700}} & \mc{1}{c}{\scriptsize{9.699}} & \mc{1}{c}{\scriptsize{13.949}} & \mc{1}{c}{\scriptsize{16.767}} & \mc{1}{c}{\scriptsize{7.952}} & \mc{1}{c}{\scriptsize{9.431}} & \mc{1}{c}{\scriptsize{7.469}} & \mc{1}{c}{\scriptsize{11.069}} \\  
+    \mc{1}{l}{\scriptsize{Std. IQ Test}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{9.528}} & \mc{1}{c}{\scriptsize{10.449}} & \mc{1}{c}{\scriptsize{6.875}} & \mc{1}{c}{\scriptsize{8.111}} & \mc{1}{c}{\scriptsize{7.952}} & \mc{1}{c}{\scriptsize{10.286}} & \mc{1}{c}{\scriptsize{10.853}} & \mc{1}{c}{\scriptsize{11.069}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.014)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.087)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.008)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{13.333}} & \mc{1}{c}{\scriptsize{12.658}} & \mc{1}{c}{\scriptsize{23.729}} & \mc{1}{c}{\scriptsize{29.361}} & \mc{1}{c}{\scriptsize{15.490}} & \mc{1}{c}{\scriptsize{9.211}} & \mc{1}{c}{\scriptsize{7.759}} & \mc{1}{c}{\scriptsize{14.288}} \\  
+     & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{13.410}} & \mc{1}{c}{\scriptsize{14.384}} & \mc{1}{c}{\scriptsize{13.896}} & \mc{1}{c}{\scriptsize{16.827}} & \mc{1}{c}{\scriptsize{15.490}} & \mc{1}{c}{\scriptsize{13.271}} & \mc{1}{c}{\scriptsize{14.118}} & \mc{1}{c}{\scriptsize{14.288}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.014)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.033)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.071)}}} & \mc{1}{c}{\scriptsize{(0.258)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.033)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{8.049}} & \mc{1}{c}{\scriptsize{6.285}} & \mc{1}{c}{\scriptsize{16.187}} & \mc{1}{c}{\scriptsize{19.781}} & \mc{1}{c}{\scriptsize{6.811}} & \mc{1}{c}{\scriptsize{5.049}} & \mc{1}{c}{\scriptsize{2.632}} & \mc{1}{c}{\scriptsize{9.031}} \\  
+     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{8.756}} & \mc{1}{c}{\scriptsize{8.145}} & \mc{1}{c}{\scriptsize{6.354}} & \mc{1}{c}{\scriptsize{6.785}} & \mc{1}{c}{\scriptsize{6.811}} & \mc{1}{c}{\scriptsize{9.443}} & \mc{1}{c}{\scriptsize{8.911}} & \mc{1}{c}{\scriptsize{9.031}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{(0.242)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.018)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{6.035}} & \mc{1}{c}{\scriptsize{4.781}} & \mc{1}{c}{\scriptsize{14.812}} & \mc{1}{c}{\scriptsize{19.224}} & \mc{1}{c}{\scriptsize{9.721}} & \mc{1}{c}{\scriptsize{3.007}} & \mc{1}{c}{\scriptsize{1.559}} & \mc{1}{c}{\scriptsize{13.483}} \\  
+     & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{12.089}} & \mc{1}{c}{\scriptsize{12.375}} & \mc{1}{c}{\scriptsize{8.950}} & \mc{1}{c}{\scriptsize{10.429}} & \mc{1}{c}{\scriptsize{9.721}} & \mc{1}{c}{\scriptsize{12.986}} & \mc{1}{c}{\scriptsize{12.995}} & \mc{1}{c}{\scriptsize{13.483}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.385)}} & \mc{1}{c}{\scriptsize{\textbf{(0.017)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{8.162}} & \mc{1}{c}{\scriptsize{6.952}} & \mc{1}{c}{\scriptsize{16.058}} & \mc{1}{c}{\scriptsize{21.662}} & \mc{1}{c}{\scriptsize{10.665}} & \mc{1}{c}{\scriptsize{5.318}} & \mc{1}{c}{\scriptsize{2.581}} & \mc{1}{c}{\scriptsize{7.788}} \\  
+     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{8.508}} & \mc{1}{c}{\scriptsize{9.152}} & \mc{1}{c}{\scriptsize{10.411}} & \mc{1}{c}{\scriptsize{13.644}} & \mc{1}{c}{\scriptsize{10.665}} & \mc{1}{c}{\scriptsize{7.964}} & \mc{1}{c}{\scriptsize{8.427}} & \mc{1}{c}{\scriptsize{7.788}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.017)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{4.921}} & \mc{1}{c}{\scriptsize{3.520}} & \mc{1}{c}{\scriptsize{12.425}} & \mc{1}{c}{\scriptsize{19.236}} & \mc{1}{c}{\scriptsize{5.029}} & \mc{1}{c}{\scriptsize{2.698}} & \mc{1}{c}{\scriptsize{0.162}} & \mc{1}{c}{\scriptsize{8.171}} \\  
+     & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{7.697}} & \mc{1}{c}{\scriptsize{7.497}} & \mc{1}{c}{\scriptsize{4.643}} & \mc{1}{c}{\scriptsize{6.615}} & \mc{1}{c}{\scriptsize{5.029}} & \mc{1}{c}{\scriptsize{8.679}} & \mc{1}{c}{\scriptsize{8.002}} & \mc{1}{c}{\scriptsize{8.171}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{5.698}} & \mc{1}{c}{\scriptsize{6.509}} & \mc{1}{c}{\scriptsize{12.556}} &  & \mc{1}{c}{\scriptsize{3.094}} & \mc{1}{c}{\scriptsize{5.171}} & \mc{1}{c}{\scriptsize{6.213}} & \mc{1}{c}{\scriptsize{12.530}} \\  
+     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{11.595}} & \mc{1}{c}{\scriptsize{9.843}} & \mc{1}{c}{\scriptsize{5.095}} & \mc{1}{c}{\scriptsize{5.631}} & \mc{1}{c}{\scriptsize{3.094}} & \mc{1}{c}{\scriptsize{13.762}} & \mc{1}{c}{\scriptsize{12.603}} & \mc{1}{c}{\scriptsize{12.530}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{(0.101)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.315)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.101)}} \\  
 
-     & \mc{1}{c}{\scriptsize{6.6}} & \mc{1}{c}{\scriptsize{6.127}} & \mc{1}{c}{\scriptsize{6.952}} & \mc{1}{c}{\scriptsize{7.339}} & \mc{1}{c}{\scriptsize{14.734}} & \mc{1}{c}{\scriptsize{1.522}} & \mc{1}{c}{\scriptsize{5.773}} & \mc{1}{c}{\scriptsize{5.070}} & \mc{1}{c}{\scriptsize{5.881}} \\  
+     & \mc{1}{c}{\scriptsize{6.6}} & \mc{1}{c}{\scriptsize{5.803}} & \mc{1}{c}{\scriptsize{5.723}} & \mc{1}{c}{\scriptsize{0.831}} & \mc{1}{c}{\scriptsize{2.665}} & \mc{1}{c}{\scriptsize{1.522}} & \mc{1}{c}{\scriptsize{5.916}} & \mc{1}{c}{\scriptsize{5.447}} & \mc{1}{c}{\scriptsize{5.881}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.242)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.567)}} & \mc{1}{c}{\scriptsize{(0.162)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.149)}} & \mc{1}{c}{\scriptsize{(0.213)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.128)}} & \mc{1}{c}{\scriptsize{(0.222)}} & \mc{1}{c}{\scriptsize{(0.162)}} \\  
 
-     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6.365}} & \mc{1}{c}{\scriptsize{6.628}} & \mc{1}{c}{\scriptsize{7.796}} & \mc{1}{c}{\scriptsize{14.159}} & \mc{1}{c}{\scriptsize{4.854}} & \mc{1}{c}{\scriptsize{5.992}} & \mc{1}{c}{\scriptsize{4.576}} & \mc{1}{c}{\scriptsize{6.522}} \\  
+     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{4.390}} & \mc{1}{c}{\scriptsize{7.508}} & \mc{1}{c}{\scriptsize{5.323}} & \mc{1}{c}{\scriptsize{13.674}} & \mc{1}{c}{\scriptsize{4.854}} & \mc{1}{c}{\scriptsize{4.156}} & \mc{1}{c}{\scriptsize{7.043}} & \mc{1}{c}{\scriptsize{6.522}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.385)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{(0.150)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.295)}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{(0.150)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{5.906}} & \mc{1}{c}{\scriptsize{4.880}} & \mc{1}{c}{\scriptsize{7.857}} & \mc{1}{c}{\scriptsize{14.202}} & \mc{1}{c}{\scriptsize{-2.612}} & \mc{1}{c}{\scriptsize{5.360}} & \mc{1}{c}{\scriptsize{3.377}} & \mc{1}{c}{\scriptsize{4.206}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{4.160}} & \mc{1}{c}{\scriptsize{3.046}} & \mc{1}{c}{\scriptsize{-2.514}} & \mc{1}{c}{\scriptsize{-1.415}} & \mc{1}{c}{\scriptsize{-2.612}} & \mc{1}{c}{\scriptsize{4.754}} & \mc{1}{c}{\scriptsize{4.030}} & \mc{1}{c}{\scriptsize{4.206}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.385)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{(0.321)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.181)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.321)}} \\  
 
-     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{8.688}} & \mc{1}{c}{\scriptsize{8.966}} & \mc{1}{c}{\scriptsize{6.850}} & \mc{1}{c}{\scriptsize{11.373}} & \mc{1}{c}{\scriptsize{-0.975}} & \mc{1}{c}{\scriptsize{9.120}} & \mc{1}{c}{\scriptsize{7.908}} & \mc{1}{c}{\scriptsize{-0.799}} \\  
+     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.686}} & \mc{1}{c}{\scriptsize{-0.034}} & \mc{1}{c}{\scriptsize{-0.343}} & \mc{1}{c}{\scriptsize{-0.908}} & \mc{1}{c}{\scriptsize{-0.975}} & \mc{1}{c}{\scriptsize{0.943}} & \mc{1}{c}{\scriptsize{0.203}} & \mc{1}{c}{\scriptsize{-0.799}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.097)}}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{6.467}} & \mc{1}{c}{\scriptsize{3.042}} & \mc{1}{c}{\scriptsize{6.110}} & \mc{1}{c}{\scriptsize{4.512}} & \mc{1}{c}{\scriptsize{-3.007}} & \mc{1}{c}{\scriptsize{6.315}} & \mc{1}{c}{\scriptsize{2.819}} & \mc{1}{c}{\scriptsize{4.509}} \\  
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{4.447}} & \mc{1}{c}{\scriptsize{2.571}} & \mc{1}{c}{\scriptsize{-2.057}} & \mc{1}{c}{\scriptsize{-4.614}} & \mc{1}{c}{\scriptsize{-3.007}} & \mc{1}{c}{\scriptsize{6.202}} & \mc{1}{c}{\scriptsize{3.969}} & \mc{1}{c}{\scriptsize{4.509}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{(0.337)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.248)}} & \mc{1}{c}{\scriptsize{(0.603)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.136)}} & \mc{1}{c}{\scriptsize{(0.449)}} & \mc{1}{c}{\scriptsize{(0.337)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{7.261}} & \mc{1}{c}{\scriptsize{4.315}} & \mc{1}{c}{\scriptsize{9.440}} & \mc{1}{c}{\scriptsize{7.510}} & \mc{1}{c}{\scriptsize{-1.543}} & \mc{1}{c}{\scriptsize{6.485}} & \mc{1}{c}{\scriptsize{3.841}} & \mc{1}{c}{\scriptsize{-0.477}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{1.550}} & \mc{1}{c}{\scriptsize{-1.024}} & \mc{1}{c}{\scriptsize{0.471}} & \mc{1}{c}{\scriptsize{-1.783}} & \mc{1}{c}{\scriptsize{-1.543}} & \mc{1}{c}{\scriptsize{2.307}} & \mc{1}{c}{\scriptsize{-0.720}} & \mc{1}{c}{\scriptsize{-0.477}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} & \mc{1}{c}{\scriptsize{(0.385)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.126)}} & \mc{1}{c}{\scriptsize{(0.596)}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
 
-    \mc{1}{l}{\scriptsize{IQ Factor}} & \mc{1}{c}{\scriptsize{2 to 5}} & \mc{1}{c}{\scriptsize{0.694}} & \mc{1}{c}{\scriptsize{0.582}} & \mc{1}{c}{\scriptsize{1.367}} & \mc{1}{c}{\scriptsize{1.799}} & \mc{1}{c}{\scriptsize{0.793}} & \mc{1}{c}{\scriptsize{0.488}} & \mc{1}{c}{\scriptsize{0.253}} & \mc{1}{c}{\scriptsize{0.912}} \\  
+    \mc{1}{l}{\scriptsize{IQ Factor}} & \mc{1}{c}{\scriptsize{2 to 5}} & \mc{1}{c}{\scriptsize{0.865}} & \mc{1}{c}{\scriptsize{0.888}} & \mc{1}{c}{\scriptsize{0.735}} & \mc{1}{c}{\scriptsize{0.904}} & \mc{1}{c}{\scriptsize{0.793}} & \mc{1}{c}{\scriptsize{0.903}} & \mc{1}{c}{\scriptsize{0.905}} & \mc{1}{c}{\scriptsize{0.912}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{(0.163)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{6 to 12}} & \mc{1}{c}{\scriptsize{0.567}} & \mc{1}{c}{\scriptsize{0.653}} & \mc{1}{c}{\scriptsize{0.523}} & \mc{1}{c}{\scriptsize{1.255}} & \mc{1}{c}{\scriptsize{0.347}} & \mc{1}{c}{\scriptsize{0.579}} & \mc{1}{c}{\scriptsize{0.501}} & \mc{1}{c}{\scriptsize{0.291}} \\  
+     & \mc{1}{c}{\scriptsize{6 to 12}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.355}} & \mc{1}{c}{\scriptsize{0.349}} & \mc{1}{c}{\scriptsize{0.661}} & \mc{1}{c}{\scriptsize{0.347}} & \mc{1}{c}{\scriptsize{0.323}} & \mc{1}{c}{\scriptsize{0.369}} & \mc{1}{c}{\scriptsize{0.291}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.385)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.257)}} & \mc{1}{c}{\scriptsize{(0.599)}} & \mc{1}{c}{\scriptsize{(0.543)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.357)}} & \mc{1}{c}{\scriptsize{(0.449)}} & \mc{1}{c}{\scriptsize{(0.543)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.673}} & \mc{1}{c}{\scriptsize{-0.365}} & \mc{1}{c}{\scriptsize{-0.776}} & \mc{1}{c}{\scriptsize{-0.602}} & \mc{1}{c}{\scriptsize{0.213}} & \mc{1}{c}{\scriptsize{-0.624}} & \mc{1}{c}{\scriptsize{-0.330}} & \mc{1}{c}{\scriptsize{-0.168}} \\  
+     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.276}} & \mc{1}{c}{\scriptsize{-0.055}} & \mc{1}{c}{\scriptsize{0.063}} & \mc{1}{c}{\scriptsize{0.295}} & \mc{1}{c}{\scriptsize{0.213}} & \mc{1}{c}{\scriptsize{-0.392}} & \mc{1}{c}{\scriptsize{-0.132}} & \mc{1}{c}{\scriptsize{-0.168}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.056)}}} & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.685)}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.777)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.699)}} \\  
 
   \bottomrule
   \end{tabular}
