--- a/AppResOutput/abccare_appendix/current/rslt_male_cat1.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat1.tex
@@ -4,49 +4,49 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Std. Achv.  Test}} & \mc{1}{c}{\scriptsize{5.5}} & \mc{1}{c}{\scriptsize{12.314}} & \mc{1}{c}{\scriptsize{9.930}} & \mc{1}{c}{\scriptsize{19.650}} & \mc{1}{c}{\scriptsize{16.805}} & \mc{1}{c}{\scriptsize{11.707}} & \mc{1}{c}{\scriptsize{9.869}} & \mc{1}{c}{\scriptsize{5.406}} & \mc{1}{c}{\scriptsize{2.381}} \\  
+    \mc{1}{l}{\scriptsize{Std. Achv.  Test}} & \mc{1}{c}{\scriptsize{5.5}} & \mc{1}{c}{\scriptsize{5.108}} & \mc{1}{c}{\scriptsize{3.050}} & \mc{1}{c}{\scriptsize{10.088}} & \mc{1}{c}{\scriptsize{13.560}} & \mc{1}{c}{\scriptsize{11.707}} & \mc{1}{c}{\scriptsize{3.863}} & \mc{1}{c}{\scriptsize{1.410}} & \mc{1}{c}{\scriptsize{2.381}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{(0.103)}} & \mc{1}{c}{\scriptsize{(0.267)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{(0.326)}} & \mc{1}{c}{\scriptsize{(0.267)}} \\  
 
-     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{6.269}} & \mc{1}{c}{\scriptsize{7.345}} & \mc{1}{c}{\scriptsize{10.379}} & \mc{1}{c}{\scriptsize{15.469}} & \mc{1}{c}{\scriptsize{3.396}} & \mc{1}{c}{\scriptsize{5.018}} & \mc{1}{c}{\scriptsize{4.784}} & \mc{1}{c}{\scriptsize{3.635}} \\  
+     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{3.091}} & \mc{1}{c}{\scriptsize{4.210}} & \mc{1}{c}{\scriptsize{2.271}} & \mc{1}{c}{\scriptsize{4.845}} & \mc{1}{c}{\scriptsize{3.396}} & \mc{1}{c}{\scriptsize{3.312}} & \mc{1}{c}{\scriptsize{3.798}} & \mc{1}{c}{\scriptsize{3.635}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.279)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.055)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.279)}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{6.5}} & \mc{1}{c}{\scriptsize{3.909}} & \mc{1}{c}{\scriptsize{3.593}} & \mc{1}{c}{\scriptsize{6.394}} & \mc{1}{c}{\scriptsize{7.317}} & \mc{1}{c}{\scriptsize{-0.618}} & \mc{1}{c}{\scriptsize{3.517}} &  & \mc{1}{c}{\scriptsize{2.328}} \\  
+     & \mc{1}{c}{\scriptsize{6.5}} & \mc{1}{c}{\scriptsize{1.708}} & \mc{1}{c}{\scriptsize{4.542}} & \mc{1}{c}{\scriptsize{-0.892}} & \mc{1}{c}{\scriptsize{5.451}} & \mc{1}{c}{\scriptsize{-0.618}} & \mc{1}{c}{\scriptsize{2.521}} & \mc{1}{c}{\scriptsize{4.077}} & \mc{1}{c}{\scriptsize{2.328}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} & \mc{1}{c}{\scriptsize{(0.963)}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{(0.458)}} & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} &  & \mc{1}{c}{\scriptsize{(0.239)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.252)}} & \mc{1}{c}{\scriptsize{\textbf{(0.042)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.135)}} & \mc{1}{c}{\scriptsize{(0.458)}} & \mc{1}{c}{\scriptsize{(0.195)}} & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.239)}} \\  
 
-     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6.411}} & \mc{1}{c}{\scriptsize{6.164}} & \mc{1}{c}{\scriptsize{12.724}} & \mc{1}{c}{\scriptsize{13.150}} & \mc{1}{c}{\scriptsize{1.107}} & \mc{1}{c}{\scriptsize{5.415}} & \mc{1}{c}{\scriptsize{4.494}} & \mc{1}{c}{\scriptsize{0.819}} \\  
+     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{0.622}} & \mc{1}{c}{\scriptsize{2.586}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{2.714}} & \mc{1}{c}{\scriptsize{1.107}} & \mc{1}{c}{\scriptsize{0.748}} & \mc{1}{c}{\scriptsize{2.114}} & \mc{1}{c}{\scriptsize{0.819}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.966)}} & \mc{1}{c}{\scriptsize{\textbf{(0.022)}}} & \mc{1}{c}{\scriptsize{(0.415)}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.437)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.414)}} & \mc{1}{c}{\scriptsize{(0.142)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.415)}} & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.437)}} \\  
 
-     & \mc{1}{c}{\scriptsize{7.5}} & \mc{1}{c}{\scriptsize{4.133}} & \mc{1}{c}{\scriptsize{5.583}} & \mc{1}{c}{\scriptsize{4.300}} & \mc{1}{c}{\scriptsize{13.683}} & \mc{1}{c}{\scriptsize{-3.232}} & \mc{1}{c}{\scriptsize{4.082}} & \mc{1}{c}{\scriptsize{3.427}} & \mc{1}{c}{\scriptsize{0.201}} \\  
+     & \mc{1}{c}{\scriptsize{7.5}} & \mc{1}{c}{\scriptsize{0.019}} & \mc{1}{c}{\scriptsize{2.252}} & \mc{1}{c}{\scriptsize{-2.767}} & \mc{1}{c}{\scriptsize{0.810}} & \mc{1}{c}{\scriptsize{-3.232}} & \mc{1}{c}{\scriptsize{0.799}} & \mc{1}{c}{\scriptsize{2.867}} & \mc{1}{c}{\scriptsize{0.201}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.286)}} & \mc{1}{c}{\scriptsize{\textbf{(0.093)}}} & \mc{1}{c}{\scriptsize{(0.114)}} & \mc{1}{c}{\scriptsize{(0.475)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.122)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.286)}} & \mc{1}{c}{\scriptsize{(0.389)}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} & \mc{1}{c}{\scriptsize{(0.475)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{6.619}} & \mc{1}{c}{\scriptsize{7.230}} & \mc{1}{c}{\scriptsize{7.125}} & \mc{1}{c}{\scriptsize{14.262}} & \mc{1}{c}{\scriptsize{-2.668}} & \mc{1}{c}{\scriptsize{6.465}} & \mc{1}{c}{\scriptsize{5.342}} & \mc{1}{c}{\scriptsize{4.225}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{2.309}} & \mc{1}{c}{\scriptsize{5.184}} & \mc{1}{c}{\scriptsize{-3.386}} & \mc{1}{c}{\scriptsize{2.492}} & \mc{1}{c}{\scriptsize{-2.668}} & \mc{1}{c}{\scriptsize{3.903}} & \mc{1}{c}{\scriptsize{6.598}} & \mc{1}{c}{\scriptsize{4.225}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.018)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.074)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.055)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.195)}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.055)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{8.5}} & \mc{1}{c}{\scriptsize{8.407}} & \mc{1}{c}{\scriptsize{8.809}} & \mc{1}{c}{\scriptsize{12.299}} & \mc{1}{c}{\scriptsize{17.510}} & \mc{1}{c}{\scriptsize{-1.456}} & \mc{1}{c}{\scriptsize{7.223}} & \mc{1}{c}{\scriptsize{6.307}} & \mc{1}{c}{\scriptsize{4.103}} \\  
+     & \mc{1}{c}{\scriptsize{8.5}} & \mc{1}{c}{\scriptsize{3.910}} & \mc{1}{c}{\scriptsize{6.716}} & \mc{1}{c}{\scriptsize{-1.771}} & \mc{1}{c}{\scriptsize{4.545}} & \mc{1}{c}{\scriptsize{-1.456}} & \mc{1}{c}{\scriptsize{4.199}} & \mc{1}{c}{\scriptsize{6.740}} & \mc{1}{c}{\scriptsize{4.103}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.417)}} & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.051)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.087)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.121)}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.417)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.087)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8.275}} & \mc{1}{c}{\scriptsize{5.193}} & \mc{1}{c}{\scriptsize{9.618}} & \mc{1}{c}{\scriptsize{8.704}} & \mc{1}{c}{\scriptsize{0.590}} & \mc{1}{c}{\scriptsize{8.477}} & \mc{1}{c}{\scriptsize{4.611}} & \mc{1}{c}{\scriptsize{0.925}} \\  
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{2.231}} & \mc{1}{c}{\scriptsize{2.577}} & \mc{1}{c}{\scriptsize{1.379}} & \mc{1}{c}{\scriptsize{3.324}} & \mc{1}{c}{\scriptsize{0.590}} & \mc{1}{c}{\scriptsize{2.532}} & \mc{1}{c}{\scriptsize{1.925}} & \mc{1}{c}{\scriptsize{0.925}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{(0.414)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.197)}} & \mc{1}{c}{\scriptsize{(0.187)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.995)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.247)}} & \mc{1}{c}{\scriptsize{(0.414)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{9.116}} & \mc{1}{c}{\scriptsize{4.293}} & \mc{1}{c}{\scriptsize{8.420}} & \mc{1}{c}{\scriptsize{4.889}} & \mc{1}{c}{\scriptsize{-0.231}} & \mc{1}{c}{\scriptsize{9.420}} & \mc{1}{c}{\scriptsize{4.412}} & \mc{1}{c}{\scriptsize{-0.876}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{1.181}} & \mc{1}{c}{\scriptsize{-0.291}} & \mc{1}{c}{\scriptsize{1.168}} & \mc{1}{c}{\scriptsize{-0.298}} & \mc{1}{c}{\scriptsize{-0.231}} & \mc{1}{c}{\scriptsize{1.356}} & \mc{1}{c}{\scriptsize{-0.972}} & \mc{1}{c}{\scriptsize{-0.876}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.133)}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.161)}} & \mc{1}{c}{\scriptsize{(0.388)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.350)}} & \mc{1}{c}{\scriptsize{(0.460)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.993)}} & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{(0.380)}} & \mc{1}{c}{\scriptsize{(0.388)}} \\  
 
-    \mc{1}{l}{\scriptsize{Achievement Factor}} & \mc{1}{c}{\scriptsize{5.5 to 12}} & \mc{1}{c}{\scriptsize{0.880}} & \mc{1}{c}{\scriptsize{1.024}} & \mc{1}{c}{\scriptsize{1.244}} & \mc{1}{c}{\scriptsize{1.547}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.739}} & \mc{1}{c}{\scriptsize{0.748}} & \mc{1}{c}{\scriptsize{0.293}} \\  
+    \mc{1}{l}{\scriptsize{Achievement Factor}} & \mc{1}{c}{\scriptsize{5.5 to 12}} & \mc{1}{c}{\scriptsize{0.271}} & \mc{1}{c}{\scriptsize{0.427}} & \mc{1}{c}{\scriptsize{0.104}} & \mc{1}{c}{\scriptsize{0.465}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.315}} & \mc{1}{c}{\scriptsize{0.428}} & \mc{1}{c}{\scriptsize{0.293}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.015)}}} & \mc{1}{c}{\scriptsize{(0.158)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.170)}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{(0.158)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.769}} & \mc{1}{c}{\scriptsize{-0.423}} & \mc{1}{c}{\scriptsize{-0.803}} & \mc{1}{c}{\scriptsize{-0.613}} & \mc{1}{c}{\scriptsize{-0.018}} & \mc{1}{c}{\scriptsize{-0.791}} & \mc{1}{c}{\scriptsize{-0.401}} & \mc{1}{c}{\scriptsize{-0.007}} \\  
+     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.154}} & \mc{1}{c}{\scriptsize{-0.109}} & \mc{1}{c}{\scriptsize{-0.114}} & \mc{1}{c}{\scriptsize{-0.144}} & \mc{1}{c}{\scriptsize{-0.018}} & \mc{1}{c}{\scriptsize{-0.176}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{-0.007}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.088)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.481)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.137)}} & \mc{1}{c}{\scriptsize{(0.496)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.261)}} & \mc{1}{c}{\scriptsize{(0.339)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{(0.481)}} & \mc{1}{c}{\scriptsize{(0.273)}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{(0.496)}} \\  
 
   \bottomrule
   \end{tabular}
