--- a/AppResOutput/abccare_appendix/current/rslt_male_cat4_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat4_sd.tex
@@ -4,41 +4,41 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Parental Labor Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{4,516}} & \mc{1}{c}{\scriptsize{7,101}} & \mc{1}{c}{\scriptsize{5,865}} & \mc{1}{c}{\scriptsize{10,219}} & \mc{1}{c}{\scriptsize{-1,164}} & \mc{1}{c}{\scriptsize{5,069}} & \mc{1}{c}{\scriptsize{6,485}} & \mc{1}{c}{\scriptsize{866}} \\  
+    \mc{1}{l}{\scriptsize{Parental Labor Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{330}} & \mc{1}{c}{\scriptsize{-850}} & \mc{1}{c}{\scriptsize{-1,046}} & \mc{1}{c}{\scriptsize{-3,177}} & \mc{1}{c}{\scriptsize{-1,164}} & \mc{1}{c}{\scriptsize{-9.244}} & \mc{1}{c}{\scriptsize{-529}} & \mc{1}{c}{\scriptsize{866}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.137)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.272)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.534)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.672)}} & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
-     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{222}} & \mc{1}{c}{\scriptsize{584}} & \mc{1}{c}{\scriptsize{-3,056}} & \mc{1}{c}{\scriptsize{1,167}} & \mc{1}{c}{\scriptsize{-1,856}} & \mc{1}{c}{\scriptsize{2,254}} & \mc{1}{c}{\scriptsize{982}} & \mc{1}{c}{\scriptsize{228}} \\  
+     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{673}} & \mc{1}{c}{\scriptsize{-1,970}} & \mc{1}{c}{\scriptsize{-1,167}} & \mc{1}{c}{\scriptsize{-4,773}} & \mc{1}{c}{\scriptsize{-1,856}} & \mc{1}{c}{\scriptsize{478}} & \mc{1}{c}{\scriptsize{-1,648}} & \mc{1}{c}{\scriptsize{228}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.484)}} & \mc{1}{c}{\scriptsize{(0.554)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.521)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.653)}} & \mc{1}{c}{\scriptsize{(0.600)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
-     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2,756}} & \mc{1}{c}{\scriptsize{3,277}} & \mc{1}{c}{\scriptsize{5,146}} & \mc{1}{c}{\scriptsize{10,509}} & \mc{1}{c}{\scriptsize{1,452}} & \mc{1}{c}{\scriptsize{2,802}} &  & \mc{1}{c}{\scriptsize{703}} \\  
+     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{1,036}} & \mc{1}{c}{\scriptsize{-1,185}} & \mc{1}{c}{\scriptsize{3,085}} & \mc{1}{c}{\scriptsize{-2,321}} & \mc{1}{c}{\scriptsize{1,452}} & \mc{1}{c}{\scriptsize{112}} & \mc{1}{c}{\scriptsize{-1,171}} & \mc{1}{c}{\scriptsize{703}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.551)}} &  & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.604)}} & \mc{1}{c}{\scriptsize{(0.534)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.672)}} & \mc{1}{c}{\scriptsize{(0.600)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
-     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{4,039}} & \mc{1}{c}{\scriptsize{7,569}} & \mc{1}{c}{\scriptsize{7,094}} & \mc{1}{c}{\scriptsize{9,236}} & \mc{1}{c}{\scriptsize{-2,687}} & \mc{1}{c}{\scriptsize{3,852}} & \mc{1}{c}{\scriptsize{7,337}} & \mc{1}{c}{\scriptsize{-420}} \\  
+     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{821}} & \mc{1}{c}{\scriptsize{1,547}} & \mc{1}{c}{\scriptsize{1,561}} & \mc{1}{c}{\scriptsize{1,867}} & \mc{1}{c}{\scriptsize{-2,687}} & \mc{1}{c}{\scriptsize{-81.743}} & \mc{1}{c}{\scriptsize{723}} & \mc{1}{c}{\scriptsize{-420}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.741)}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.534)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.741)}} & \mc{1}{c}{\scriptsize{(0.672)}} & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{2,181}} & \mc{1}{c}{\scriptsize{5,322}} & \mc{1}{c}{\scriptsize{13,195}} & \mc{1}{c}{\scriptsize{13,013}} & \mc{1}{c}{\scriptsize{4,889}} & \mc{1}{c}{\scriptsize{528}} & \mc{1}{c}{\scriptsize{3,941}} & \mc{1}{c}{\scriptsize{13,487}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{11,786}} & \mc{1}{c}{\scriptsize{12,461}} & \mc{1}{c}{\scriptsize{6,832}} & \mc{1}{c}{\scriptsize{5,160}} & \mc{1}{c}{\scriptsize{4,889}} & \mc{1}{c}{\scriptsize{13,438}} & \mc{1}{c}{\scriptsize{13,460}} & \mc{1}{c}{\scriptsize{13,487}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.484)}} & \mc{1}{c}{\scriptsize{(0.429)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.188)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.173)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.161)}} & \mc{1}{c}{\scriptsize{(0.299)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.364)}} & \mc{1}{c}{\scriptsize{(0.173)}} \\  
 
-     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{13,633}} & \mc{1}{c}{\scriptsize{19,386}} & \mc{1}{c}{\scriptsize{22,294}} & \mc{1}{c}{\scriptsize{33,624}} & \mc{1}{c}{\scriptsize{12,682}} & \mc{1}{c}{\scriptsize{11,570}} & \mc{1}{c}{\scriptsize{11,176}} & \mc{1}{c}{\scriptsize{5,411}} \\  
+     & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{7,085}} & \mc{1}{c}{\scriptsize{10,384}} & \mc{1}{c}{\scriptsize{15,563}} & \mc{1}{c}{\scriptsize{20,007}} & \mc{1}{c}{\scriptsize{12,682}} & \mc{1}{c}{\scriptsize{4,773}} & \mc{1}{c}{\scriptsize{7,791}} & \mc{1}{c}{\scriptsize{5,411}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.429)}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.512)}} & \mc{1}{c}{\scriptsize{(0.476)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.283)}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{(0.429)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.364)}} & \mc{1}{c}{\scriptsize{(0.476)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8,565}} & \mc{1}{c}{\scriptsize{9,322}} & \mc{1}{c}{\scriptsize{2,829}} & \mc{1}{c}{\scriptsize{5,533}} & \mc{1}{c}{\scriptsize{4,915}} & \mc{1}{c}{\scriptsize{9,819}} & \mc{1}{c}{\scriptsize{8,817}} & \mc{1}{c}{\scriptsize{4,379}} \\  
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8,488}} & \mc{1}{c}{\scriptsize{7,185}} & \mc{1}{c}{\scriptsize{6,697}} & \mc{1}{c}{\scriptsize{10,024}} & \mc{1}{c}{\scriptsize{4,915}} & \mc{1}{c}{\scriptsize{7,603}} & \mc{1}{c}{\scriptsize{5,020}} & \mc{1}{c}{\scriptsize{4,379}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.492)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.283)}} & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.600)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{5,708}} & \mc{1}{c}{\scriptsize{6,944}} & \mc{1}{c}{\scriptsize{25,270}} & \mc{1}{c}{\scriptsize{41,245}} & \mc{1}{c}{\scriptsize{-1,000}} & \mc{1}{c}{\scriptsize{4,446}} & \mc{1}{c}{\scriptsize{4,608}} & \mc{1}{c}{\scriptsize{10,323}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{12,732}} & \mc{1}{c}{\scriptsize{12,650}} & \mc{1}{c}{\scriptsize{1,568}} & \mc{1}{c}{\scriptsize{-2,880}} & \mc{1}{c}{\scriptsize{-1,000}} & \mc{1}{c}{\scriptsize{15,124}} & \mc{1}{c}{\scriptsize{17,027}} & \mc{1}{c}{\scriptsize{10,323}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.507)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.204)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.091)}}} & \mc{1}{c}{\scriptsize{(0.299)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{\textbf{(0.033)}}} & \mc{1}{c}{\scriptsize{(0.151)}} & \mc{1}{c}{\scriptsize{(0.204)}} \\  
 
-    \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.195}} & \mc{1}{c}{\scriptsize{0.554}} & \mc{1}{c}{\scriptsize{0.578}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{0.226}} & \mc{1}{c}{\scriptsize{-0.122}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{-0.078}} & \mc{1}{c}{\scriptsize{-0.222}} & \mc{1}{c}{\scriptsize{0.368}} & \mc{1}{c}{\scriptsize{1.127}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{-0.125}} & \mc{1}{c}{\scriptsize{-0.271}} & \mc{1}{c}{\scriptsize{-0.122}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.554)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.613)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.521)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.602)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.585)}} & \mc{1}{c}{\scriptsize{(0.576)}} & \mc{1}{c}{\scriptsize{(0.657)}} \\  
 
   \bottomrule
   \end{tabular}
