--- a/AppResOutput/abccare_appendix/current/rslt_male_cat9_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat9_sd.tex
@@ -4,25 +4,25 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Cig. Smoked per day last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.765}} & \mc{1}{c}{\scriptsize{0.723}} & \mc{1}{c}{\scriptsize{-2.338}} & \mc{1}{c}{\scriptsize{0.217}} & \mc{1}{c}{\scriptsize{0.643}} & \mc{1}{c}{\scriptsize{-0.530}} & \mc{1}{c}{\scriptsize{0.889}} & \mc{1}{c}{\scriptsize{1.218}} \\  
+    \mc{1}{l}{\scriptsize{Cig. Smoked per day last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.826}} & \mc{1}{c}{\scriptsize{0.452}} & \mc{1}{c}{\scriptsize{0.757}} & \mc{1}{c}{\scriptsize{-1.035}} & \mc{1}{c}{\scriptsize{0.643}} & \mc{1}{c}{\scriptsize{1.429}} & \mc{1}{c}{\scriptsize{0.889}} & \mc{1}{c}{\scriptsize{1.218}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.683)}} & \mc{1}{c}{\scriptsize{(0.622)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.707)}} & \mc{1}{c}{\scriptsize{(0.584)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.527)}} & \mc{1}{c}{\scriptsize{(0.560)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.397)}} & \mc{1}{c}{\scriptsize{(0.599)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
 
-    \mc{1}{l}{\scriptsize{Days drank alcohol last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.742}} & \mc{1}{c}{\scriptsize{0.248}} & \mc{1}{c}{\scriptsize{-0.567}} & \mc{1}{c}{\scriptsize{-0.002}} & \mc{1}{c}{\scriptsize{0.100}} & \mc{1}{c}{\scriptsize{-0.919}} & \mc{1}{c}{\scriptsize{0.217}} & \mc{1}{c}{\scriptsize{1.338}} \\  
+    \mc{1}{l}{\scriptsize{Days drank alcohol last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.805}} & \mc{1}{c}{\scriptsize{1.564}} & \mc{1}{c}{\scriptsize{-0.186}} & \mc{1}{c}{\scriptsize{2.018}} & \mc{1}{c}{\scriptsize{0.100}} & \mc{1}{c}{\scriptsize{0.944}} & \mc{1}{c}{\scriptsize{1.366}} & \mc{1}{c}{\scriptsize{1.338}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.683)}} & \mc{1}{c}{\scriptsize{(0.622)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.648)}} & \mc{1}{c}{\scriptsize{(0.595)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.527)}} & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.397)}} & \mc{1}{c}{\scriptsize{(0.599)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
 
-    \mc{1}{l}{\scriptsize{Days binge drank alcohol last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.358}} & \mc{1}{c}{\scriptsize{0.350}} & \mc{1}{c}{\scriptsize{-1.063}} & \mc{1}{c}{\scriptsize{-0.037}} & \mc{1}{c}{\scriptsize{0.695}} & \mc{1}{c}{\scriptsize{-0.231}} & \mc{1}{c}{\scriptsize{0.494}} & \mc{1}{c}{\scriptsize{0.702}} \\  
+    \mc{1}{l}{\scriptsize{Days binge drank alcohol last month}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.500}} & \mc{1}{c}{\scriptsize{0.537}} & \mc{1}{c}{\scriptsize{0.543}} & \mc{1}{c}{\scriptsize{0.605}} & \mc{1}{c}{\scriptsize{0.695}} & \mc{1}{c}{\scriptsize{0.491}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{0.702}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.683)}} & \mc{1}{c}{\scriptsize{(0.622)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.423)}} & \mc{1}{c}{\scriptsize{(0.707)}} & \mc{1}{c}{\scriptsize{(0.513)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.455)}} & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.423)}} & \mc{1}{c}{\scriptsize{(0.397)}} & \mc{1}{c}{\scriptsize{(0.599)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
 
-    \mc{1}{l}{\scriptsize{Self-reported drug user}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.033}} & \mc{1}{c}{\scriptsize{-0.039}} & \mc{1}{c}{\scriptsize{-0.116}} & \mc{1}{c}{\scriptsize{-0.221}} & \mc{1}{c}{\scriptsize{-0.557}} & \mc{1}{c}{\scriptsize{-0.010}} & \mc{1}{c}{\scriptsize{0.031}} & \mc{1}{c}{\scriptsize{-0.330}} \\  
+    \mc{1}{l}{\scriptsize{Self-reported drug user}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.333}} & \mc{1}{c}{\scriptsize{-0.398}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.693}} & \mc{1}{c}{\scriptsize{-0.557}} & \mc{1}{c}{\scriptsize{-0.233}} & \mc{1}{c}{\scriptsize{-0.309}} & \mc{1}{c}{\scriptsize{-0.330}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.683)}} & \mc{1}{c}{\scriptsize{(0.622)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(0.143)}} & \mc{1}{c}{\scriptsize{(0.707)}} & \mc{1}{c}{\scriptsize{(0.595)}} & \mc{1}{c}{\scriptsize{(0.183)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.114)}} & \mc{1}{c}{\scriptsize{\textbf{(0.054)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.143)}} & \mc{1}{c}{\scriptsize{(0.397)}} & \mc{1}{c}{\scriptsize{(0.164)}} & \mc{1}{c}{\scriptsize{(0.183)}} \\  
 
-    \mc{1}{l}{\scriptsize{Substance Use Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{0.001}} & \mc{1}{c}{\scriptsize{0.526}} & \mc{1}{c}{\scriptsize{0.362}} & \mc{1}{c}{\scriptsize{0.670}} & \mc{1}{c}{\scriptsize{0.075}} & \mc{1}{c}{\scriptsize{-0.098}} & \mc{1}{c}{\scriptsize{0.481}} & \mc{1}{c}{\scriptsize{0.414}} \\  
+    \mc{1}{l}{\scriptsize{Substance Use Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{0.261}} & \mc{1}{c}{\scriptsize{0.202}} & \mc{1}{c}{\scriptsize{0.055}} & \mc{1}{c}{\scriptsize{-0.113}} & \mc{1}{c}{\scriptsize{0.075}} & \mc{1}{c}{\scriptsize{0.389}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.414}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.683)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.997)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.707)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.527)}} & \mc{1}{c}{\scriptsize{(0.560)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.397)}} & \mc{1}{c}{\scriptsize{(0.599)}} & \mc{1}{c}{\scriptsize{(0.415)}} \\  
 
   \bottomrule
   \end{tabular}
