--- a/AppResOutput/abccare_appendix/current/rslt_male_counts_n10a10.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_counts_n10a10.tex
@@ -4,37 +4,37 @@
     \scriptsize{Category} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} & \scriptsize{N} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Cognitive Skills}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{74}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{26}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{35}} & \mc{1}{c}{\scriptsize{56}} & \mc{1}{c}{\scriptsize{27}} \\  
+    \mc{1}{l}{\scriptsize{Cognitive Skills}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{63}} & \mc{1}{c}{\scriptsize{22}} & \mc{1}{c}{\scriptsize{22}} & \mc{1}{c}{\scriptsize{26}} & \mc{1}{c}{\scriptsize{63}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{56}} & \mc{1}{c}{\scriptsize{27}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.190)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Childhood Household Environment}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{46}} & \mc{1}{c}{\scriptsize{38}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{13}} \\  
+    \mc{1}{l}{\scriptsize{Childhood Household Environment}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{23}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{13}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.361)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.391)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.677)}} & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.391)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Mother's Employment, Education, and Income}} & \mc{1}{c}{\scriptsize{40}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{15}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Employment, Education, and Income}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{15}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.113)}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.077)}}} & \mc{1}{c}{\scriptsize{(0.374)}} & \mc{1}{c}{\scriptsize{(0.268)}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} & \mc{1}{c}{\scriptsize{(0.139)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.221)}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.268)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Education, Employment, Income}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{36}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{15}} \\  
+    \mc{1}{l}{\scriptsize{Education, Employment, Income}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{33}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{15}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.253)}} & \mc{1}{c}{\scriptsize{\textbf{(0.064)}}} & \mc{1}{c}{\scriptsize{(0.131)}} & \mc{1}{c}{\scriptsize{(0.139)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.155)}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.383)}} & \mc{1}{c}{\scriptsize{(0.253)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.139)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Crime}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{75}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{75}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{4}} \\  
+    \mc{1}{l}{\scriptsize{Crime}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{4}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.562)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Drugs and Alcohol}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{5}} \\  
+    \mc{1}{l}{\scriptsize{Drugs and Alcohol}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{5}} \\  
 
-     & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.492)}} & \mc{1}{c}{\scriptsize{(0.557)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{(0.610)}} & \mc{1}{c}{\scriptsize{(0.368)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Adult Health}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{11}} & \mc{1}{c}{\scriptsize{17}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{11}} & \mc{1}{c}{\scriptsize{11}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{32}} & \mc{1}{c}{\scriptsize{19}} \\  
+    \mc{1}{l}{\scriptsize{Adult Health}} & \mc{1}{c}{\scriptsize{32}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{11}} & \mc{1}{c}{\scriptsize{11}} & \mc{1}{c}{\scriptsize{32}} & \mc{1}{c}{\scriptsize{26}} & \mc{1}{c}{\scriptsize{32}} & \mc{1}{c}{\scriptsize{19}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.102)}} & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.324)}} & \mc{1}{c}{\scriptsize{(0.753)}} & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.674)}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.041)}}} & \mc{1}{c}{\scriptsize{(0.175)}} & \mc{1}{c}{\scriptsize{(0.191)}} & \mc{1}{c}{\scriptsize{(0.405)}} & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.090)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Mental Health}} & \mc{1}{c}{\scriptsize{55}} & \mc{1}{c}{\scriptsize{45}} & \mc{1}{c}{\scriptsize{36}} & \mc{1}{c}{\scriptsize{44}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{55}} & \mc{1}{c}{\scriptsize{36}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{11}} \\  
+    \mc{1}{l}{\scriptsize{Mental Health}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{18}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{9}} & \mc{1}{c}{\scriptsize{11}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.027)}}} & \mc{1}{c}{\scriptsize{(0.427)}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.071)}}} & \mc{1}{c}{\scriptsize{(0.351)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.556)}} & \mc{1}{c}{\scriptsize{(0.330)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.535)}} & \mc{1}{c}{\scriptsize{(0.427)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.351)}} &  \\  
 
   \bottomrule
   \end{tabular}
