--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat13_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat13_sd.tex
@@ -4,21 +4,21 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Hemoglobin Level (\%)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.322}} & \mc{1}{c}{\scriptsize{0.306}} & \mc{1}{c}{\scriptsize{0.240}} & \mc{1}{c}{\scriptsize{-0.104}} & \mc{1}{c}{\scriptsize{0.120}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.271}} & \mc{1}{c}{\scriptsize{0.045}} \\  
+    \mc{1}{l}{\scriptsize{Hemoglobin Level (\%)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.003}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.032}} & \mc{1}{c}{\scriptsize{-0.026}} & \mc{1}{c}{\scriptsize{0.120}} & \mc{1}{c}{\scriptsize{-0.029}} & \mc{1}{c}{\scriptsize{0.123}} & \mc{1}{c}{\scriptsize{0.045}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{\textbf{(0.027)}}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.400)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.706)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.734)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.592)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.625)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.706)}} \\  
 
-    \mc{1}{l}{\scriptsize{Prediabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.129}} & \mc{1}{c}{\scriptsize{-0.140}} & \mc{1}{c}{\scriptsize{-0.267}} & \mc{1}{c}{\scriptsize{-0.595}} & \mc{1}{c}{\scriptsize{-0.034}} & \mc{1}{c}{\scriptsize{-0.138}} & \mc{1}{c}{\scriptsize{-0.109}} & \mc{1}{c}{\scriptsize{0.009}} \\  
+    \mc{1}{l}{\scriptsize{Prediabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.004}} & \mc{1}{c}{\scriptsize{0.027}} & \mc{1}{c}{\scriptsize{-0.040}} & \mc{1}{c}{\scriptsize{-0.067}} & \mc{1}{c}{\scriptsize{-0.034}} & \mc{1}{c}{\scriptsize{0.004}} & \mc{1}{c}{\scriptsize{0.022}} & \mc{1}{c}{\scriptsize{0.009}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{\textbf{(0.027)}}} & \mc{1}{c}{\scriptsize{(0.140)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.400)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.734)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.592)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.625)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
 
-    \mc{1}{l}{\scriptsize{Diabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.080}} & \mc{1}{c}{\scriptsize{0.066}} & \mc{1}{c}{\scriptsize{0.080}} & \mc{1}{c}{\scriptsize{0.004}} & \mc{1}{c}{\scriptsize{0.051}} & \mc{1}{c}{\scriptsize{0.080}} & \mc{1}{c}{\scriptsize{0.067}} & \mc{1}{c}{\scriptsize{-0.003}} \\  
+    \mc{1}{l}{\scriptsize{Diabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.002}} & \mc{1}{c}{\scriptsize{0.015}} & \mc{1}{c}{\scriptsize{0.043}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{0.051}} & \mc{1}{c}{\scriptsize{-0.015}} & \mc{1}{c}{\scriptsize{0.017}} & \mc{1}{c}{\scriptsize{-0.003}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.116)}} & \mc{1}{c}{\scriptsize{(0.338)}} & \mc{1}{c}{\scriptsize{\textbf{(0.027)}}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.102)}} & \mc{1}{c}{\scriptsize{(0.111)}} & \mc{1}{c}{\scriptsize{(0.357)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.734)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.104)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.102)}} & \mc{1}{c}{\scriptsize{(0.625)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
 
-    \mc{1}{l}{\scriptsize{Diabetes Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.218}} & \mc{1}{c}{\scriptsize{0.136}} & \mc{1}{c}{\scriptsize{0.106}} & \mc{1}{c}{\scriptsize{-0.465}} & \mc{1}{c}{\scriptsize{0.096}} & \mc{1}{c}{\scriptsize{0.199}} & \mc{1}{c}{\scriptsize{0.149}} & \mc{1}{c}{\scriptsize{-0.013}} \\  
+    \mc{1}{l}{\scriptsize{Diabetes Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.000}} & \mc{1}{c}{\scriptsize{0.070}} & \mc{1}{c}{\scriptsize{0.079}} & \mc{1}{c}{\scriptsize{-0.101}} & \mc{1}{c}{\scriptsize{0.096}} & \mc{1}{c}{\scriptsize{-0.040}} & \mc{1}{c}{\scriptsize{0.079}} & \mc{1}{c}{\scriptsize{-0.013}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{\textbf{(0.027)}}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.400)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.734)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.586)}} & \mc{1}{c}{\scriptsize{(0.634)}} & \mc{1}{c}{\scriptsize{(0.563)}} & \mc{1}{c}{\scriptsize{(0.625)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.721)}} \\  
 
   \bottomrule
   \end{tabular}
