--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat15.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat15.tex
@@ -4,49 +4,49 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.804}} & \mc{1}{c}{\scriptsize{-4.989}} & \mc{1}{c}{\scriptsize{-3.718}} & \mc{1}{c}{\scriptsize{-6.911}} & \mc{1}{c}{\scriptsize{-4.630}} & \mc{1}{c}{\scriptsize{-2.295}} & \mc{1}{c}{\scriptsize{-4.265}} & \mc{1}{c}{\scriptsize{-3.001}} \\  
+    \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.709}} & \mc{1}{c}{\scriptsize{-3.314}} & \mc{1}{c}{\scriptsize{-4.304}} & \mc{1}{c}{\scriptsize{-5.923}} & \mc{1}{c}{\scriptsize{-4.630}} & \mc{1}{c}{\scriptsize{-2.258}} & \mc{1}{c}{\scriptsize{-2.669}} & \mc{1}{c}{\scriptsize{-3.001}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.120)}} & \mc{1}{c}{\scriptsize{\textbf{(0.022)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.198)}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.067)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.097)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.095)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-3.066}} & \mc{1}{c}{\scriptsize{-4.118}} & \mc{1}{c}{\scriptsize{-4.852}} & \mc{1}{c}{\scriptsize{-3.901}} & \mc{1}{c}{\scriptsize{-2.063}} & \mc{1}{c}{\scriptsize{-3.252}} & \mc{1}{c}{\scriptsize{-3.428}} & \mc{1}{c}{\scriptsize{-0.687}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.057}} & \mc{1}{c}{\scriptsize{-0.609}} & \mc{1}{c}{\scriptsize{-2.144}} & \mc{1}{c}{\scriptsize{-3.744}} & \mc{1}{c}{\scriptsize{-2.063}} & \mc{1}{c}{\scriptsize{-0.950}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{-0.687}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.219)}} & \mc{1}{c}{\scriptsize{(0.172)}} & \mc{1}{c}{\scriptsize{(0.972)}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{(0.255)}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.392)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.335)}} & \mc{1}{c}{\scriptsize{(0.371)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.190)}} & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.392)}} \\  
 
-    \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.515}} & \mc{1}{c}{\scriptsize{-0.837}} & \mc{1}{c}{\scriptsize{1.649}} & \mc{1}{c}{\scriptsize{2.453}} & \mc{1}{c}{\scriptsize{-4.310}} & \mc{1}{c}{\scriptsize{-3.636}} & \mc{1}{c}{\scriptsize{-1.634}} & \mc{1}{c}{\scriptsize{-3.669}} \\  
+    \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-3.329}} & \mc{1}{c}{\scriptsize{-4.297}} & \mc{1}{c}{\scriptsize{-4.299}} & \mc{1}{c}{\scriptsize{-4.310}} & \mc{1}{c}{\scriptsize{-4.058}} & \mc{1}{c}{\scriptsize{-3.216}} & \mc{1}{c}{\scriptsize{-3.669}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.165)}} & \mc{1}{c}{\scriptsize{(0.379)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.091)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.093)}}} & \mc{1}{c}{\scriptsize{(0.292)}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.046)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.087)}}} & \mc{1}{c}{\scriptsize{(0.114)}} & \mc{1}{c}{\scriptsize{\textbf{(0.091)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.042}} & \mc{1}{c}{\scriptsize{-3.002}} & \mc{1}{c}{\scriptsize{3.148}} & \mc{1}{c}{\scriptsize{2.543}} & \mc{1}{c}{\scriptsize{0.482}} & \mc{1}{c}{\scriptsize{-2.985}} & \mc{1}{c}{\scriptsize{-4.062}} & \mc{1}{c}{\scriptsize{-3.161}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.904}} & \mc{1}{c}{\scriptsize{-2.256}} & \mc{1}{c}{\scriptsize{1.064}} & \mc{1}{c}{\scriptsize{-0.701}} & \mc{1}{c}{\scriptsize{0.482}} & \mc{1}{c}{\scriptsize{-2.974}} & \mc{1}{c}{\scriptsize{-3.181}} & \mc{1}{c}{\scriptsize{-3.161}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.403)}} & \mc{1}{c}{\scriptsize{(0.229)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.220)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.280)}} & \mc{1}{c}{\scriptsize{(0.213)}} & \mc{1}{c}{\scriptsize{(0.101)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{(0.136)}} & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.391)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.101)}} \\  
 
-    \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{0.400}} & \mc{1}{c}{\scriptsize{-0.889}} & \mc{1}{c}{\scriptsize{3.857}} & \mc{1}{c}{\scriptsize{0.042}} & \mc{1}{c}{\scriptsize{-2.925}} & \mc{1}{c}{\scriptsize{-0.333}} & \mc{1}{c}{\scriptsize{-1.561}} & \mc{1}{c}{\scriptsize{-2.737}} \\  
+    \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.749}} & \mc{1}{c}{\scriptsize{-2.745}} & \mc{1}{c}{\scriptsize{-2.996}} & \mc{1}{c}{\scriptsize{-4.679}} & \mc{1}{c}{\scriptsize{-2.925}} & \mc{1}{c}{\scriptsize{-2.638}} & \mc{1}{c}{\scriptsize{-2.485}} & \mc{1}{c}{\scriptsize{-2.737}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.445)}} & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.177)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.307)}} & \mc{1}{c}{\scriptsize{(0.103)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{\textbf{(0.085)}}} & \mc{1}{c}{\scriptsize{(0.177)}} & \mc{1}{c}{\scriptsize{(0.102)}} & \mc{1}{c}{\scriptsize{(0.137)}} & \mc{1}{c}{\scriptsize{(0.103)}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.847}} & \mc{1}{c}{\scriptsize{-3.766}} & \mc{1}{c}{\scriptsize{1.630}} & \mc{1}{c}{\scriptsize{1.232}} & \mc{1}{c}{\scriptsize{-2.084}} & \mc{1}{c}{\scriptsize{-3.504}} & \mc{1}{c}{\scriptsize{-4.374}} & \mc{1}{c}{\scriptsize{-4.724}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-3.399}} & \mc{1}{c}{\scriptsize{-4.109}} & \mc{1}{c}{\scriptsize{-1.502}} & \mc{1}{c}{\scriptsize{-4.550}} & \mc{1}{c}{\scriptsize{-2.084}} & \mc{1}{c}{\scriptsize{-4.155}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-4.724}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.331)}} & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.260)}} & \mc{1}{c}{\scriptsize{(0.281)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.195)}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.081)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(0.281)}} & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.041)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-1.471}} & \mc{1}{c}{\scriptsize{0.233}} & \mc{1}{c}{\scriptsize{2.941}} & \mc{1}{c}{\scriptsize{2.235}} & \mc{1}{c}{\scriptsize{-4.613}} & \mc{1}{c}{\scriptsize{-2.251}} & \mc{1}{c}{\scriptsize{0.172}} & \mc{1}{c}{\scriptsize{-2.544}} \\  
+    \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.256}} & \mc{1}{c}{\scriptsize{-2.213}} & \mc{1}{c}{\scriptsize{-4.552}} & \mc{1}{c}{\scriptsize{-4.455}} & \mc{1}{c}{\scriptsize{-4.613}} & \mc{1}{c}{\scriptsize{-2.894}} & \mc{1}{c}{\scriptsize{-1.905}} & \mc{1}{c}{\scriptsize{-2.544}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.281)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{\textbf{(0.076)}}} & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.103)}} & \mc{1}{c}{\scriptsize{\textbf{(0.074)}}} & \mc{1}{c}{\scriptsize{(0.106)}} & \mc{1}{c}{\scriptsize{\textbf{(0.076)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.041)}}} & \mc{1}{c}{\scriptsize{(0.133)}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.556}} & \mc{1}{c}{\scriptsize{-2.956}} & \mc{1}{c}{\scriptsize{-1.889}} & \mc{1}{c}{\scriptsize{0.365}} & \mc{1}{c}{\scriptsize{-2.411}} & \mc{1}{c}{\scriptsize{-2.156}} & \mc{1}{c}{\scriptsize{-3.029}} & \mc{1}{c}{\scriptsize{-0.844}} \\  
+     & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.091}} & \mc{1}{c}{\scriptsize{-0.694}} & \mc{1}{c}{\scriptsize{-2.076}} & \mc{1}{c}{\scriptsize{-1.664}} & \mc{1}{c}{\scriptsize{-2.411}} & \mc{1}{c}{\scriptsize{-1.082}} &  & \mc{1}{c}{\scriptsize{-0.844}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{(0.239)}} & \mc{1}{c}{\scriptsize{(0.972)}} & \mc{1}{c}{\scriptsize{(0.379)}} & \mc{1}{c}{\scriptsize{(0.247)}} & \mc{1}{c}{\scriptsize{(0.332)}} & \mc{1}{c}{\scriptsize{(0.256)}} & \mc{1}{c}{\scriptsize{(0.357)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.329)}} & \mc{1}{c}{\scriptsize{(0.366)}} & \mc{1}{c}{\scriptsize{(0.304)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.247)}} & \mc{1}{c}{\scriptsize{(0.354)}} &  & \mc{1}{c}{\scriptsize{(0.357)}} \\  
 
-    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{0.246}} & \mc{1}{c}{\scriptsize{0.383}} & \mc{1}{c}{\scriptsize{1.978}} & \mc{1}{c}{\scriptsize{0.979}} & \mc{1}{c}{\scriptsize{-4.929}} & \mc{1}{c}{\scriptsize{0.330}} & \mc{1}{c}{\scriptsize{0.854}} & \mc{1}{c}{\scriptsize{-2.485}} \\  
+    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.146}} & \mc{1}{c}{\scriptsize{-2.581}} & \mc{1}{c}{\scriptsize{-4.917}} & \mc{1}{c}{\scriptsize{-4.896}} & \mc{1}{c}{\scriptsize{-4.929}} & \mc{1}{c}{\scriptsize{-2.564}} & \mc{1}{c}{\scriptsize{-1.827}} & \mc{1}{c}{\scriptsize{-2.485}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.449)}} & \mc{1}{c}{\scriptsize{(0.451)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{(0.435)}} & \mc{1}{c}{\scriptsize{(0.372)}} & \mc{1}{c}{\scriptsize{(0.109)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.086)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.023)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.033)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.191)}} & \mc{1}{c}{\scriptsize{(0.109)}} \\  
 
-    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.675}} & \mc{1}{c}{\scriptsize{-3.372}} & \mc{1}{c}{\scriptsize{0.111}} & \mc{1}{c}{\scriptsize{0.283}} & \mc{1}{c}{\scriptsize{-0.514}} & \mc{1}{c}{\scriptsize{-2.989}} & \mc{1}{c}{\scriptsize{-3.746}} & \mc{1}{c}{\scriptsize{-3.446}} \\  
+    \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.516}} & \mc{1}{c}{\scriptsize{-2.306}} & \mc{1}{c}{\scriptsize{-0.151}} & \mc{1}{c}{\scriptsize{-2.444}} & \mc{1}{c}{\scriptsize{-0.514}} & \mc{1}{c}{\scriptsize{-3.477}} & \mc{1}{c}{\scriptsize{-2.589}} & \mc{1}{c}{\scriptsize{-3.446}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.347)}} & \mc{1}{c}{\scriptsize{(0.219)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.405)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.292)}} & \mc{1}{c}{\scriptsize{(0.245)}} & \mc{1}{c}{\scriptsize{(0.114)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{(0.175)}} & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.120)}} & \mc{1}{c}{\scriptsize{(0.168)}} & \mc{1}{c}{\scriptsize{(0.114)}} \\  
 
-    \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.130}} & \mc{1}{c}{\scriptsize{-0.097}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{0.083}} & \mc{1}{c}{\scriptsize{-0.476}} & \mc{1}{c}{\scriptsize{-0.170}} & \mc{1}{c}{\scriptsize{-0.100}} & \mc{1}{c}{\scriptsize{-0.468}} \\  
+    \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.507}} & \mc{1}{c}{\scriptsize{-0.390}} & \mc{1}{c}{\scriptsize{-0.527}} & \mc{1}{c}{\scriptsize{-0.615}} & \mc{1}{c}{\scriptsize{-0.476}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.355}} & \mc{1}{c}{\scriptsize{-0.468}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.381)}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{(0.950)}} & \mc{1}{c}{\scriptsize{(0.130)}} & \mc{1}{c}{\scriptsize{(0.340)}} & \mc{1}{c}{\scriptsize{(0.414)}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.041)}}} & \mc{1}{c}{\scriptsize{(0.113)}} & \mc{1}{c}{\scriptsize{\textbf{(0.071)}}} & \mc{1}{c}{\scriptsize{(0.130)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.085)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} \\  
 
   \bottomrule
   \end{tabular}
