--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat1_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat1_sd.tex
@@ -4,49 +4,49 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Std. Achv.  Test}} & \mc{1}{c}{\scriptsize{5.5}} & \mc{1}{c}{\scriptsize{5.108}} & \mc{1}{c}{\scriptsize{3.050}} & \mc{1}{c}{\scriptsize{10.088}} & \mc{1}{c}{\scriptsize{13.560}} & \mc{1}{c}{\scriptsize{14.177}} & \mc{1}{c}{\scriptsize{3.863}} & \mc{1}{c}{\scriptsize{1.410}} & \mc{1}{c}{\scriptsize{5.812}} \\  
+    \mc{1}{l}{\scriptsize{Std. Achv.  Test}} & \mc{1}{c}{\scriptsize{5.5}} & \mc{1}{c}{\scriptsize{8.029}} & \mc{1}{c}{\scriptsize{6.821}} & \mc{1}{c}{\scriptsize{14.284}} & \mc{1}{c}{\scriptsize{13.907}} & \mc{1}{c}{\scriptsize{14.177}} & \mc{1}{c}{\scriptsize{6.223}} & \mc{1}{c}{\scriptsize{4.725}} & \mc{1}{c}{\scriptsize{5.812}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.663)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.869)}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.006)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
 
-     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{3.091}} & \mc{1}{c}{\scriptsize{4.210}} & \mc{1}{c}{\scriptsize{2.271}} & \mc{1}{c}{\scriptsize{4.845}} & \mc{1}{c}{\scriptsize{7.130}} & \mc{1}{c}{\scriptsize{3.312}} & \mc{1}{c}{\scriptsize{3.798}} & \mc{1}{c}{\scriptsize{4.728}} \\  
+     & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{4.543}} & \mc{1}{c}{\scriptsize{5.225}} & \mc{1}{c}{\scriptsize{6.178}} & \mc{1}{c}{\scriptsize{7.895}} & \mc{1}{c}{\scriptsize{7.130}} & \mc{1}{c}{\scriptsize{4.075}} & \mc{1}{c}{\scriptsize{4.556}} & \mc{1}{c}{\scriptsize{4.728}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.384)}} & \mc{1}{c}{\scriptsize{(0.183)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.247)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.133)}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.046)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.012)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{6.5}} & \mc{1}{c}{\scriptsize{1.708}} & \mc{1}{c}{\scriptsize{4.542}} & \mc{1}{c}{\scriptsize{-0.892}} & \mc{1}{c}{\scriptsize{5.451}} & \mc{1}{c}{\scriptsize{2.132}} & \mc{1}{c}{\scriptsize{2.521}} & \mc{1}{c}{\scriptsize{4.077}} & \mc{1}{c}{\scriptsize{3.602}} \\  
+     & \mc{1}{c}{\scriptsize{6.5}} & \mc{1}{c}{\scriptsize{2.767}} & \mc{1}{c}{\scriptsize{3.274}} & \mc{1}{c}{\scriptsize{2.049}} & \mc{1}{c}{\scriptsize{4.264}} & \mc{1}{c}{\scriptsize{2.132}} & \mc{1}{c}{\scriptsize{2.931}} & \mc{1}{c}{\scriptsize{3.066}} & \mc{1}{c}{\scriptsize{3.602}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.732)}} & \mc{1}{c}{\scriptsize{(0.221)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.630)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.067)}}} & \mc{1}{c}{\scriptsize{(0.127)}} & \mc{1}{c}{\scriptsize{(0.442)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{\textbf{(0.091)}}} & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
 
-     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{0.622}} & \mc{1}{c}{\scriptsize{2.586}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{2.714}} & \mc{1}{c}{\scriptsize{5.843}} & \mc{1}{c}{\scriptsize{0.748}} & \mc{1}{c}{\scriptsize{2.114}} & \mc{1}{c}{\scriptsize{3.598}} \\  
+     & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{3.435}} & \mc{1}{c}{\scriptsize{3.147}} & \mc{1}{c}{\scriptsize{5.227}} & \mc{1}{c}{\scriptsize{6.630}} & \mc{1}{c}{\scriptsize{5.843}} & \mc{1}{c}{\scriptsize{3.025}} & \mc{1}{c}{\scriptsize{2.357}} & \mc{1}{c}{\scriptsize{3.598}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.736)}} & \mc{1}{c}{\scriptsize{(0.519)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.315)}} & \mc{1}{c}{\scriptsize{(0.200)}} & \mc{1}{c}{\scriptsize{(0.731)}} & \mc{1}{c}{\scriptsize{(0.712)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.061)}}} & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.258)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.200)}} & \mc{1}{c}{\scriptsize{(0.111)}} & \mc{1}{c}{\scriptsize{(0.345)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
 
-     & \mc{1}{c}{\scriptsize{7.5}} & \mc{1}{c}{\scriptsize{0.019}} & \mc{1}{c}{\scriptsize{2.252}} & \mc{1}{c}{\scriptsize{-2.767}} & \mc{1}{c}{\scriptsize{0.810}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{0.799}} & \mc{1}{c}{\scriptsize{2.867}} & \mc{1}{c}{\scriptsize{2.126}} \\  
+     & \mc{1}{c}{\scriptsize{7.5}} & \mc{1}{c}{\scriptsize{1.937}} & \mc{1}{c}{\scriptsize{3.101}} & \mc{1}{c}{\scriptsize{0.667}} & \mc{1}{c}{\scriptsize{4.290}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{2.308}} & \mc{1}{c}{\scriptsize{2.946}} & \mc{1}{c}{\scriptsize{2.126}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.736)}} & \mc{1}{c}{\scriptsize{(0.453)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.731)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.148)}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.452)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.122)}} & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{2.309}} & \mc{1}{c}{\scriptsize{5.184}} & \mc{1}{c}{\scriptsize{-3.386}} & \mc{1}{c}{\scriptsize{2.492}} & \mc{1}{c}{\scriptsize{2.387}} & \mc{1}{c}{\scriptsize{3.903}} & \mc{1}{c}{\scriptsize{6.598}} & \mc{1}{c}{\scriptsize{5.503}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{4.207}} & \mc{1}{c}{\scriptsize{5.146}} & \mc{1}{c}{\scriptsize{1.630}} & \mc{1}{c}{\scriptsize{5.443}} & \mc{1}{c}{\scriptsize{2.387}} & \mc{1}{c}{\scriptsize{4.959}} & \mc{1}{c}{\scriptsize{5.482}} & \mc{1}{c}{\scriptsize{5.503}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.661)}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{(0.442)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{\textbf{(0.043)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{8.5}} & \mc{1}{c}{\scriptsize{3.910}} & \mc{1}{c}{\scriptsize{6.716}} & \mc{1}{c}{\scriptsize{-1.771}} & \mc{1}{c}{\scriptsize{4.545}} & \mc{1}{c}{\scriptsize{5.379}} & \mc{1}{c}{\scriptsize{4.199}} & \mc{1}{c}{\scriptsize{6.740}} & \mc{1}{c}{\scriptsize{5.824}} \\  
+     & \mc{1}{c}{\scriptsize{8.5}} & \mc{1}{c}{\scriptsize{5.938}} & \mc{1}{c}{\scriptsize{6.593}} & \mc{1}{c}{\scriptsize{5.046}} & \mc{1}{c}{\scriptsize{7.976}} & \mc{1}{c}{\scriptsize{5.379}} & \mc{1}{c}{\scriptsize{5.507}} & \mc{1}{c}{\scriptsize{5.907}} & \mc{1}{c}{\scriptsize{5.824}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.443)}} & \mc{1}{c}{\scriptsize{(0.369)}} & \mc{1}{c}{\scriptsize{\textbf{(0.081)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.016)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{(0.301)}} & \mc{1}{c}{\scriptsize{(0.148)}} & \mc{1}{c}{\scriptsize{(0.443)}} & \mc{1}{c}{\scriptsize{\textbf{(0.030)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} \\  
 
-     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{2.231}} & \mc{1}{c}{\scriptsize{2.577}} & \mc{1}{c}{\scriptsize{1.379}} & \mc{1}{c}{\scriptsize{3.324}} & \mc{1}{c}{\scriptsize{4.151}} & \mc{1}{c}{\scriptsize{2.532}} & \mc{1}{c}{\scriptsize{1.925}} & \mc{1}{c}{\scriptsize{4.150}} \\  
+     & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{5.163}} & \mc{1}{c}{\scriptsize{3.641}} & \mc{1}{c}{\scriptsize{5.177}} & \mc{1}{c}{\scriptsize{5.378}} & \mc{1}{c}{\scriptsize{4.151}} & \mc{1}{c}{\scriptsize{5.424}} & \mc{1}{c}{\scriptsize{3.200}} & \mc{1}{c}{\scriptsize{4.150}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.678)}} & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.443)}} & \mc{1}{c}{\scriptsize{(0.633)}} & \mc{1}{c}{\scriptsize{(0.712)}} & \mc{1}{c}{\scriptsize{(0.174)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.258)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.443)}} & \mc{1}{c}{\scriptsize{\textbf{(0.046)}}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.174)}} \\  
 
-     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{1.181}} & \mc{1}{c}{\scriptsize{-0.291}} & \mc{1}{c}{\scriptsize{1.168}} & \mc{1}{c}{\scriptsize{-0.298}} & \mc{1}{c}{\scriptsize{2.834}} & \mc{1}{c}{\scriptsize{1.356}} & \mc{1}{c}{\scriptsize{-0.972}} & \mc{1}{c}{\scriptsize{3.493}} \\  
+     & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{5.217}} & \mc{1}{c}{\scriptsize{2.253}} & \mc{1}{c}{\scriptsize{4.504}} & \mc{1}{c}{\scriptsize{2.087}} & \mc{1}{c}{\scriptsize{2.834}} & \mc{1}{c}{\scriptsize{5.521}} & \mc{1}{c}{\scriptsize{2.027}} & \mc{1}{c}{\scriptsize{3.493}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.736)}} & \mc{1}{c}{\scriptsize{(0.676)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.731)}} & \mc{1}{c}{\scriptsize{(0.869)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{(0.185)}} & \mc{1}{c}{\scriptsize{(0.301)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{(0.345)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
 
-    \mc{1}{l}{\scriptsize{Achievement Factor}} & \mc{1}{c}{\scriptsize{5.5 to 12}} & \mc{1}{c}{\scriptsize{0.271}} & \mc{1}{c}{\scriptsize{0.427}} & \mc{1}{c}{\scriptsize{0.104}} & \mc{1}{c}{\scriptsize{0.465}} & \mc{1}{c}{\scriptsize{0.688}} & \mc{1}{c}{\scriptsize{0.315}} & \mc{1}{c}{\scriptsize{0.428}} & \mc{1}{c}{\scriptsize{0.515}} \\  
+    \mc{1}{l}{\scriptsize{Achievement Factor}} & \mc{1}{c}{\scriptsize{5.5 to 12}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{0.621}} & \mc{1}{c}{\scriptsize{0.634}} & \mc{1}{c}{\scriptsize{0.900}} & \mc{1}{c}{\scriptsize{0.688}} & \mc{1}{c}{\scriptsize{0.474}} & \mc{1}{c}{\scriptsize{0.547}} & \mc{1}{c}{\scriptsize{0.515}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.621)}} & \mc{1}{c}{\scriptsize{(0.312)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.246)}} & \mc{1}{c}{\scriptsize{(0.535)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.258)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.246)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.131)}} \\  
 
-     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.154}} & \mc{1}{c}{\scriptsize{-0.109}} & \mc{1}{c}{\scriptsize{-0.114}} & \mc{1}{c}{\scriptsize{-0.144}} & \mc{1}{c}{\scriptsize{-0.313}} & \mc{1}{c}{\scriptsize{-0.176}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{-0.341}} \\  
+     & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.460}} & \mc{1}{c}{\scriptsize{-0.265}} & \mc{1}{c}{\scriptsize{-0.431}} & \mc{1}{c}{\scriptsize{-0.340}} & \mc{1}{c}{\scriptsize{-0.313}} & \mc{1}{c}{\scriptsize{-0.485}} & \mc{1}{c}{\scriptsize{-0.235}} & \mc{1}{c}{\scriptsize{-0.341}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.736)}} & \mc{1}{c}{\scriptsize{(0.676)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.731)}} & \mc{1}{c}{\scriptsize{(0.869)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.165)}} & \mc{1}{c}{\scriptsize{(0.277)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{\textbf{(0.046)}}} & \mc{1}{c}{\scriptsize{(0.345)}} & \mc{1}{c}{\scriptsize{(0.202)}} \\  
 
   \bottomrule
   \end{tabular}
