--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat2.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat2.tex
@@ -4,33 +4,33 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{0.372}} & \mc{1}{c}{\scriptsize{0.313}} & \mc{1}{c}{\scriptsize{0.944}} & \mc{1}{c}{\scriptsize{0.168}} & \mc{1}{c}{\scriptsize{0.892}} & \mc{1}{c}{\scriptsize{0.143}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{0.193}} \\  
+    \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{1.005}} & \mc{1}{c}{\scriptsize{0.192}} & \mc{1}{c}{\scriptsize{1.332}} & \mc{1}{c}{\scriptsize{0.759}} & \mc{1}{c}{\scriptsize{0.892}} & \mc{1}{c}{\scriptsize{0.566}} & \mc{1}{c}{\scriptsize{0.028}} & \mc{1}{c}{\scriptsize{0.193}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.383)}} & \mc{1}{c}{\scriptsize{(0.426)}} & \mc{1}{c}{\scriptsize{(0.324)}} & \mc{1}{c}{\scriptsize{(0.482)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.460)}} & \mc{1}{c}{\scriptsize{(0.420)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.124)}} & \mc{1}{c}{\scriptsize{(0.433)}} & \mc{1}{c}{\scriptsize{(0.149)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.286)}} & \mc{1}{c}{\scriptsize{(0.494)}} & \mc{1}{c}{\scriptsize{(0.420)}} \\  
 
-     & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.529}} & \mc{1}{c}{\scriptsize{0.431}} & \mc{1}{c}{\scriptsize{-0.348}} & \mc{1}{c}{\scriptsize{2.963}} & \mc{1}{c}{\scriptsize{-0.766}} & \mc{1}{c}{\scriptsize{-0.711}} & \mc{1}{c}{\scriptsize{0.437}} \\  
+     & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{1.126}} & \mc{1}{c}{\scriptsize{0.375}} & \mc{1}{c}{\scriptsize{2.706}} & \mc{1}{c}{\scriptsize{1.931}} & \mc{1}{c}{\scriptsize{2.963}} & \mc{1}{c}{\scriptsize{0.368}} & \mc{1}{c}{\scriptsize{0.087}} & \mc{1}{c}{\scriptsize{0.437}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.338)}} & \mc{1}{c}{\scriptsize{(0.361)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.052)}}} & \mc{1}{c}{\scriptsize{(0.283)}} & \mc{1}{c}{\scriptsize{(0.314)}} & \mc{1}{c}{\scriptsize{(0.337)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.130)}} & \mc{1}{c}{\scriptsize{(0.354)}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.127)}} & \mc{1}{c}{\scriptsize{\textbf{(0.052)}}} & \mc{1}{c}{\scriptsize{(0.374)}} & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.337)}} \\  
 
-     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.141}} & \mc{1}{c}{\scriptsize{0.736}} & \mc{1}{c}{\scriptsize{1.654}} & \mc{1}{c}{\scriptsize{3.429}} & \mc{1}{c}{\scriptsize{3.732}} & \mc{1}{c}{\scriptsize{-0.292}} & \mc{1}{c}{\scriptsize{0.473}} & \mc{1}{c}{\scriptsize{-0.051}} \\  
+     & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.441}} & \mc{1}{c}{\scriptsize{0.312}} & \mc{1}{c}{\scriptsize{3.089}} & \mc{1}{c}{\scriptsize{3.791}} & \mc{1}{c}{\scriptsize{3.732}} & \mc{1}{c}{\scriptsize{-0.588}} & \mc{1}{c}{\scriptsize{-0.482}} & \mc{1}{c}{\scriptsize{-0.051}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.469)}} & \mc{1}{c}{\scriptsize{(0.303)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.089)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.435)}} & \mc{1}{c}{\scriptsize{(0.375)}} & \mc{1}{c}{\scriptsize{(0.492)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.330)}} & \mc{1}{c}{\scriptsize{(0.379)}} & \mc{1}{c}{\scriptsize{\textbf{(0.017)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.274)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.492)}} \\  
 
-     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{1.404}} & \mc{1}{c}{\scriptsize{1.280}} & \mc{1}{c}{\scriptsize{2.897}} & \mc{1}{c}{\scriptsize{3.683}} & \mc{1}{c}{\scriptsize{8.842}} & \mc{1}{c}{\scriptsize{0.962}} & \mc{1}{c}{\scriptsize{0.874}} & \mc{1}{c}{\scriptsize{0.324}} \\  
+     & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2.112}} & \mc{1}{c}{\scriptsize{1.287}} & \mc{1}{c}{\scriptsize{8.288}} & \mc{1}{c}{\scriptsize{8.502}} & \mc{1}{c}{\scriptsize{8.842}} & \mc{1}{c}{\scriptsize{0.306}} & \mc{1}{c}{\scriptsize{-0.342}} & \mc{1}{c}{\scriptsize{0.324}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.274)}} & \mc{1}{c}{\scriptsize{(0.278)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.331)}} & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{(0.421)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.101)}} & \mc{1}{c}{\scriptsize{(0.225)}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.418)}} & \mc{1}{c}{\scriptsize{(0.430)}} & \mc{1}{c}{\scriptsize{(0.421)}} \\  
 
-     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{1.146}} & \mc{1}{c}{\scriptsize{1.677}} & \mc{1}{c}{\scriptsize{3.312}} & \mc{1}{c}{\scriptsize{5.224}} & \mc{1}{c}{\scriptsize{8.377}} & \mc{1}{c}{\scriptsize{0.527}} & \mc{1}{c}{\scriptsize{1.547}} & \mc{1}{c}{\scriptsize{0.337}} \\  
+     & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{1.927}} & \mc{1}{c}{\scriptsize{0.657}} & \mc{1}{c}{\scriptsize{8.156}} & \mc{1}{c}{\scriptsize{6.745}} & \mc{1}{c}{\scriptsize{8.377}} & \mc{1}{c}{\scriptsize{0.146}} & \mc{1}{c}{\scriptsize{-0.413}} & \mc{1}{c}{\scriptsize{0.337}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{(0.383)}} & \mc{1}{c}{\scriptsize{(0.237)}} & \mc{1}{c}{\scriptsize{(0.426)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.107)}} & \mc{1}{c}{\scriptsize{(0.369)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.017)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.402)}} & \mc{1}{c}{\scriptsize{(0.426)}} \\  
 
-     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{1.548}} & \mc{1}{c}{\scriptsize{0.976}} & \mc{1}{c}{\scriptsize{-0.898}} & \mc{1}{c}{\scriptsize{1.266}} & \mc{1}{c}{\scriptsize{3.642}} & \mc{1}{c}{\scriptsize{2.062}} & \mc{1}{c}{\scriptsize{0.969}} & \mc{1}{c}{\scriptsize{0.204}} \\  
+     & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{1.004}} & \mc{1}{c}{\scriptsize{0.198}} & \mc{1}{c}{\scriptsize{3.102}} & \mc{1}{c}{\scriptsize{2.169}} & \mc{1}{c}{\scriptsize{3.642}} & \mc{1}{c}{\scriptsize{0.492}} & \mc{1}{c}{\scriptsize{-0.414}} & \mc{1}{c}{\scriptsize{0.204}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.235)}} & \mc{1}{c}{\scriptsize{(0.340)}} & \mc{1}{c}{\scriptsize{(0.981)}} & \mc{1}{c}{\scriptsize{(0.301)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.437)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.426)}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.395)}} & \mc{1}{c}{\scriptsize{(0.380)}} & \mc{1}{c}{\scriptsize{(0.437)}} \\  
 
-    \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.287}} & \mc{1}{c}{\scriptsize{0.042}} & \mc{1}{c}{\scriptsize{0.131}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.752}} & \mc{1}{c}{\scriptsize{0.320}} & \mc{1}{c}{\scriptsize{0.052}} & \mc{1}{c}{\scriptsize{0.199}} \\  
+    \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.276}} & \mc{1}{c}{\scriptsize{0.050}} & \mc{1}{c}{\scriptsize{0.751}} & \mc{1}{c}{\scriptsize{0.477}} & \mc{1}{c}{\scriptsize{0.752}} & \mc{1}{c}{\scriptsize{0.158}} & \mc{1}{c}{\scriptsize{-0.069}} & \mc{1}{c}{\scriptsize{0.199}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.126)}} & \mc{1}{c}{\scriptsize{(0.437)}} & \mc{1}{c}{\scriptsize{(0.987)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.127)}} & \mc{1}{c}{\scriptsize{(0.425)}} & \mc{1}{c}{\scriptsize{(0.181)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{(0.404)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.217)}} & \mc{1}{c}{\scriptsize{(0.381)}} & \mc{1}{c}{\scriptsize{(0.181)}} \\  
 
   \bottomrule
   \end{tabular}
