--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat6_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat6_sd.tex
@@ -4,41 +4,41 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Graduated High School}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.073}} & \mc{1}{c}{\scriptsize{0.130}} & \mc{1}{c}{\scriptsize{0.114}} & \mc{1}{c}{\scriptsize{0.186}} & \mc{1}{c}{\scriptsize{0.352}} & \mc{1}{c}{\scriptsize{0.077}} & \mc{1}{c}{\scriptsize{0.136}} & \mc{1}{c}{\scriptsize{0.059}} \\  
+    \mc{1}{l}{\scriptsize{Graduated High School}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{0.094}} & \mc{1}{c}{\scriptsize{0.390}} & \mc{1}{c}{\scriptsize{0.324}} & \mc{1}{c}{\scriptsize{0.352}} & \mc{1}{c}{\scriptsize{0.103}} & \mc{1}{c}{\scriptsize{0.035}} & \mc{1}{c}{\scriptsize{0.059}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.443)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{\textbf{(0.012)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.590)}} & \mc{1}{c}{\scriptsize{(0.443)}} \\  
 
-    \mc{1}{l}{\scriptsize{Attended Voc./Tech./Com. College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.099}} & \mc{1}{c}{\scriptsize{-0.147}} & \mc{1}{c}{\scriptsize{0.086}} & \mc{1}{c}{\scriptsize{0.188}} & \mc{1}{c}{\scriptsize{-0.044}} & \mc{1}{c}{\scriptsize{-0.138}} & \mc{1}{c}{\scriptsize{-0.229}} & \mc{1}{c}{\scriptsize{-0.152}} \\  
+    \mc{1}{l}{\scriptsize{Attended Voc./Tech./Com. College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.099}} & \mc{1}{c}{\scriptsize{0.000}} & \mc{1}{c}{\scriptsize{0.093}} & \mc{1}{c}{\scriptsize{-0.044}} & \mc{1}{c}{\scriptsize{-0.100}} & \mc{1}{c}{\scriptsize{-0.156}} & \mc{1}{c}{\scriptsize{-0.152}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.580)}} & \mc{1}{c}{\scriptsize{(0.543)}} & \mc{1}{c}{\scriptsize{(0.324)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.337)}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{(0.538)}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.580)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
 
-    \mc{1}{l}{\scriptsize{Graduated 4-year College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.170}} & \mc{1}{c}{\scriptsize{0.178}} & \mc{1}{c}{\scriptsize{0.124}} & \mc{1}{c}{\scriptsize{0.347}} & \mc{1}{c}{\scriptsize{0.176}} & \mc{1}{c}{\scriptsize{0.179}} & \mc{1}{c}{\scriptsize{0.167}} & \mc{1}{c}{\scriptsize{0.120}} \\  
+    \mc{1}{l}{\scriptsize{Graduated 4-year College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.161}} & \mc{1}{c}{\scriptsize{0.116}} & \mc{1}{c}{\scriptsize{0.188}} & \mc{1}{c}{\scriptsize{0.139}} & \mc{1}{c}{\scriptsize{0.176}} & \mc{1}{c}{\scriptsize{0.148}} & \mc{1}{c}{\scriptsize{0.109}} & \mc{1}{c}{\scriptsize{0.120}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.272)}} & \mc{1}{c}{\scriptsize{(0.359)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{(0.126)}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.314)}} & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.126)}} & \mc{1}{c}{\scriptsize{(0.139)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
 
-    \mc{1}{l}{\scriptsize{Years of Edu.}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.525}} & \mc{1}{c}{\scriptsize{0.785}} & \mc{1}{c}{\scriptsize{0.857}} & \mc{1}{c}{\scriptsize{1.619}} & \mc{1}{c}{\scriptsize{2.423}} & \mc{1}{c}{\scriptsize{0.385}} & \mc{1}{c}{\scriptsize{0.649}} & \mc{1}{c}{\scriptsize{0.886}} \\  
+    \mc{1}{l}{\scriptsize{Years of Edu.}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{1.367}} & \mc{1}{c}{\scriptsize{1.062}} & \mc{1}{c}{\scriptsize{2.513}} & \mc{1}{c}{\scriptsize{2.188}} & \mc{1}{c}{\scriptsize{2.423}} & \mc{1}{c}{\scriptsize{0.986}} & \mc{1}{c}{\scriptsize{0.804}} & \mc{1}{c}{\scriptsize{0.886}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.113)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.199)}} & \mc{1}{c}{\scriptsize{(0.113)}} \\  
 
-    \mc{1}{l}{\scriptsize{Ever Had Special Education by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.035}} & \mc{1}{c}{\scriptsize{-0.122}} & \mc{1}{c}{\scriptsize{0.158}} & \mc{1}{c}{\scriptsize{0.033}} & \mc{1}{c}{\scriptsize{0.127}} & \mc{1}{c}{\scriptsize{-0.085}} & \mc{1}{c}{\scriptsize{-0.169}} & \mc{1}{c}{\scriptsize{-0.040}} \\  
+    \mc{1}{l}{\scriptsize{Ever Had Special Education by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{0.001}} & \mc{1}{c}{\scriptsize{0.001}} & \mc{1}{c}{\scriptsize{0.153}} & \mc{1}{c}{\scriptsize{0.075}} & \mc{1}{c}{\scriptsize{0.127}} & \mc{1}{c}{\scriptsize{-0.030}} & \mc{1}{c}{\scriptsize{-0.026}} & \mc{1}{c}{\scriptsize{-0.040}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.443)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.483)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.389)}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.367)}} & \mc{1}{c}{\scriptsize{(0.590)}} & \mc{1}{c}{\scriptsize{(0.443)}} \\  
 
-    \mc{1}{l}{\scriptsize{Total Number of Special Education by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.544}} & \mc{1}{c}{\scriptsize{-1.204}} & \mc{1}{c}{\scriptsize{0.019}} & \mc{1}{c}{\scriptsize{-1.713}} & \mc{1}{c}{\scriptsize{0.975}} & \mc{1}{c}{\scriptsize{-0.690}} & \mc{1}{c}{\scriptsize{-1.185}} & \mc{1}{c}{\scriptsize{-0.852}} \\  
+    \mc{1}{l}{\scriptsize{Total Number of Special Education by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.547}} & \mc{1}{c}{\scriptsize{-0.468}} & \mc{1}{c}{\scriptsize{0.977}} & \mc{1}{c}{\scriptsize{0.549}} & \mc{1}{c}{\scriptsize{0.975}} & \mc{1}{c}{\scriptsize{-0.844}} & \mc{1}{c}{\scriptsize{-0.653}} & \mc{1}{c}{\scriptsize{-0.852}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.352)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.337)}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{(0.366)}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.470)}} & \mc{1}{c}{\scriptsize{(0.352)}} \\  
 
-    \mc{1}{l}{\scriptsize{Ever Retained by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.095}} & \mc{1}{c}{\scriptsize{-0.213}} & \mc{1}{c}{\scriptsize{-0.023}} & \mc{1}{c}{\scriptsize{-0.238}} & \mc{1}{c}{\scriptsize{-0.176}} & \mc{1}{c}{\scriptsize{-0.113}} & \mc{1}{c}{\scriptsize{-0.206}} & \mc{1}{c}{\scriptsize{-0.183}} \\  
+    \mc{1}{l}{\scriptsize{Ever Retained by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.170}} & \mc{1}{c}{\scriptsize{-0.211}} & \mc{1}{c}{\scriptsize{-0.175}} & \mc{1}{c}{\scriptsize{-0.248}} & \mc{1}{c}{\scriptsize{-0.176}} & \mc{1}{c}{\scriptsize{-0.170}} & \mc{1}{c}{\scriptsize{-0.209}} & \mc{1}{c}{\scriptsize{-0.183}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.622)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.543)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.175)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.366)}} & \mc{1}{c}{\scriptsize{(0.265)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.139)}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.175)}} \\  
 
-    \mc{1}{l}{\scriptsize{Total Number of Retention by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.070}} & \mc{1}{c}{\scriptsize{-0.197}} & \mc{1}{c}{\scriptsize{0.031}} & \mc{1}{c}{\scriptsize{-0.215}} & \mc{1}{c}{\scriptsize{-0.068}} & \mc{1}{c}{\scriptsize{-0.096}} & \mc{1}{c}{\scriptsize{-0.190}} & \mc{1}{c}{\scriptsize{-0.156}} \\  
+    \mc{1}{l}{\scriptsize{Total Number of Retention by Grade 5}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.152}} & \mc{1}{c}{\scriptsize{-0.144}} & \mc{1}{c}{\scriptsize{-0.086}} & \mc{1}{c}{\scriptsize{-0.111}} & \mc{1}{c}{\scriptsize{-0.068}} & \mc{1}{c}{\scriptsize{-0.156}} & \mc{1}{c}{\scriptsize{-0.152}} & \mc{1}{c}{\scriptsize{-0.156}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.359)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.580)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.350)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.244)}} & \mc{1}{c}{\scriptsize{(0.332)}} & \mc{1}{c}{\scriptsize{(0.538)}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.580)}} & \mc{1}{c}{\scriptsize{(0.335)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.350)}} \\  
 
-    \mc{1}{l}{\scriptsize{Education Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.344}} & \mc{1}{c}{\scriptsize{0.564}} & \mc{1}{c}{\scriptsize{0.230}} & \mc{1}{c}{\scriptsize{1.020}} & \mc{1}{c}{\scriptsize{0.504}} & \mc{1}{c}{\scriptsize{0.385}} & \mc{1}{c}{\scriptsize{0.485}} & \mc{1}{c}{\scriptsize{0.331}} \\  
+    \mc{1}{l}{\scriptsize{Education Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.449}} & \mc{1}{c}{\scriptsize{0.396}} & \mc{1}{c}{\scriptsize{0.557}} & \mc{1}{c}{\scriptsize{0.582}} & \mc{1}{c}{\scriptsize{0.504}} & \mc{1}{c}{\scriptsize{0.380}} & \mc{1}{c}{\scriptsize{0.346}} & \mc{1}{c}{\scriptsize{0.331}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.444)}} & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.188)}} & \mc{1}{c}{\scriptsize{(0.408)}} & \mc{1}{c}{\scriptsize{(0.266)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.164)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.202)}} & \mc{1}{c}{\scriptsize{(0.188)}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.293)}} \\  
 
   \bottomrule
   \end{tabular}
