--- a/AppResOutput/abccare_appendix/current/rslt_pooled_counts_n50a100.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_counts_n50a100.tex
@@ -4,37 +4,37 @@
     \scriptsize{Category} & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} & \scriptsize{N} \\ 
     \midrule  
 
-    \mc{1}{l}{\scriptsize{Cognitive Skills}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{70}} & \mc{1}{c}{\scriptsize{78}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{85}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{27}} \\  
+    \mc{1}{l}{\scriptsize{Cognitive Skills}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{89}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{27}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Childhood Household Environment}} & \mc{1}{c}{\scriptsize{54}} & \mc{1}{c}{\scriptsize{62}} & \mc{1}{c}{\scriptsize{46}} & \mc{1}{c}{\scriptsize{46}} & \mc{1}{c}{\scriptsize{54}} & \mc{1}{c}{\scriptsize{75}} & \mc{1}{c}{\scriptsize{77}} & \mc{1}{c}{\scriptsize{92}} & \mc{1}{c}{\scriptsize{13}} \\  
+    \mc{1}{l}{\scriptsize{Childhood Household Environment}} & \mc{1}{c}{\scriptsize{62}} & \mc{1}{c}{\scriptsize{69}} & \mc{1}{c}{\scriptsize{54}} & \mc{1}{c}{\scriptsize{54}} & \mc{1}{c}{\scriptsize{54}} & \mc{1}{c}{\scriptsize{85}} & \mc{1}{c}{\scriptsize{62}} & \mc{1}{c}{\scriptsize{92}} & \mc{1}{c}{\scriptsize{13}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.384)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.652)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{(0.110)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.202)}} & \mc{1}{c}{\scriptsize{(0.222)}} & \mc{1}{c}{\scriptsize{(0.180)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.255)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Mother's Employment, Education, and Income}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{73}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{15}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Employment, Education, and Income}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{93}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{73}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{15}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.270)}} & \mc{1}{c}{\scriptsize{\textbf{(0.032)}}} & \mc{1}{c}{\scriptsize{(0.280)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.386)}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.095)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Education, Employment, Income}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{15}} \\  
+    \mc{1}{l}{\scriptsize{Education, Employment, Income}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{87}} & \mc{1}{c}{\scriptsize{15}} \\  
 
-     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.428)}} & \mc{1}{c}{\scriptsize{\textbf{(0.089)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Crime}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{4}} \\  
+    \mc{1}{l}{\scriptsize{Crime}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{75}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{25}} & \mc{1}{c}{\scriptsize{4}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.895)}} & \mc{1}{c}{\scriptsize{(0.730)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.888)}} & \mc{1}{c}{\scriptsize{(0.924)}} & \mc{1}{c}{\scriptsize{(0.766)}} & \mc{1}{c}{\scriptsize{(0.870)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.590)}} & \mc{1}{c}{\scriptsize{(0.871)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.897)}} & \mc{1}{c}{\scriptsize{(0.888)}} & \mc{1}{c}{\scriptsize{(0.953)}} & \mc{1}{c}{\scriptsize{(0.801)}} & \mc{1}{c}{\scriptsize{(0.870)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Drugs and Alcohol}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{40}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{5}} \\  
+    \mc{1}{l}{\scriptsize{Drugs and Alcohol}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{60}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{20}} & \mc{1}{c}{\scriptsize{5}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.986)}} & \mc{1}{c}{\scriptsize{(0.986)}} & \mc{1}{c}{\scriptsize{(0.695)}} & \mc{1}{c}{\scriptsize{(0.305)}} & \mc{1}{c}{\scriptsize{(0.310)}} & \mc{1}{c}{\scriptsize{(0.950)}} & \mc{1}{c}{\scriptsize{(0.986)}} & \mc{1}{c}{\scriptsize{(0.939)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.775)}} & \mc{1}{c}{\scriptsize{(0.966)}} & \mc{1}{c}{\scriptsize{\textbf{(0.093)}}} & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.310)}} & \mc{1}{c}{\scriptsize{(0.935)}} & \mc{1}{c}{\scriptsize{(0.905)}} & \mc{1}{c}{\scriptsize{(0.939)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Adult Health}} & \mc{1}{c}{\scriptsize{58}} & \mc{1}{c}{\scriptsize{74}} & \mc{1}{c}{\scriptsize{37}} & \mc{1}{c}{\scriptsize{37}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{68}} & \mc{1}{c}{\scriptsize{74}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{19}} \\  
+    \mc{1}{l}{\scriptsize{Adult Health}} & \mc{1}{c}{\scriptsize{63}} & \mc{1}{c}{\scriptsize{58}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{47}} & \mc{1}{c}{\scriptsize{63}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{53}} & \mc{1}{c}{\scriptsize{19}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{\textbf{(0.037)}}} & \mc{1}{c}{\scriptsize{(0.719)}} & \mc{1}{c}{\scriptsize{(0.752)}} & \mc{1}{c}{\scriptsize{(0.630)}} & \mc{1}{c}{\scriptsize{\textbf{(0.086)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{(0.365)}} &  \\  
+     & \mc{1}{c}{\scriptsize{(0.209)}} & \mc{1}{c}{\scriptsize{(0.319)}} & \mc{1}{c}{\scriptsize{(0.624)}} & \mc{1}{c}{\scriptsize{(0.425)}} & \mc{1}{c}{\scriptsize{(0.630)}} & \mc{1}{c}{\scriptsize{(0.218)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.365)}} &  \\  
 
-    \mc{1}{l}{\scriptsize{Mental Health}} & \mc{1}{c}{\scriptsize{82}} & \mc{1}{c}{\scriptsize{82}} & \mc{1}{c}{\scriptsize{36}} & \mc{1}{c}{\scriptsize{18}} & \mc{1}{c}{\scriptsize{91}} & \mc{1}{c}{\scriptsize{91}} & \mc{1}{c}{\scriptsize{82}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{11}} \\  
+    \mc{1}{l}{\scriptsize{Mental Health}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{91}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{91}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{90}} & \mc{1}{c}{\scriptsize{100}} & \mc{1}{c}{\scriptsize{11}} \\  
 
-     & \mc{1}{c}{\scriptsize{(0.133)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.749)}} & \mc{1}{c}{\scriptsize{(0.929)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} &  \\  
 
   \bottomrule
   \end{tabular}
